--- a/SheldonMRossSolutions.tex
+++ b/SheldonMRossSolutions.tex
@@ -50,6 +50,7 @@
 %	\include{./TeX_files/exercise03_new}
 %	\include{./TeX_files/exercise04_new}
 %	\include{./TeX_files/exercise05_new}
+%	\include{./TeX_files/chapter05}
 %	\include{./TeX_files/exercise06_new}
 %	\include{./TeX_files/exercise07_new}
 %	\include{./TeX_files/chapter08}
@@ -58,8 +59,14 @@
 %	\include{./TeX_files/exercise09_new}
 %	\include{./TeX_files/chapter10}
 %	\include{./TeX_files/exercise10_new}
-	\include{./TeX_files/chapter11}
-	\include{./TeX_files/exercise11_new}
+%	\include{./TeX_files/chapter11}
+%	\include{./TeX_files/exercise11_new}
+%	\include{./TeX_files/chapter12}
+%	\include{./TeX_files/exercise12_new}
+%	\include{./TeX_files/chapter13}
+%	\include{./TeX_files/exercise13_new}
+	\include{./TeX_files/chapter14}
+%	\include{./TeX_files/exercise14_new}
 	% bibliography, glossary and index would go here.
 	
 \end{document}
