--- a/TeX_files/chapter01.tex
+++ b/TeX_files/chapter01.tex
@@ -1,20 +1,20 @@
 \chapter{Introduction to Statistics}
 
 \begin{flushright}
-	\textit{``Sorry, your sampling is biased."} \\
+	\textit{``Sorry, your sampling is biased."} 
 \end{flushright}
 
-\textbf{Descriptive Statistics} : gather and describe data using summary measures. Covered by school-level classes. \\
+\textbf{Descriptive Statistics} : gather and describe data using summary measures. Covered by school-level classes.
 
-\textbf{Inferential Statistics} : drawing conclusions from statistics using statistical models. Is the observed trend mere chance or is it a significant result worthy of more scrutiny. The right set of assumptions making up a \textit{probability model}, are not always apparent given the dataset. \\
+\textbf{Inferential Statistics} : drawing conclusions from statistics using statistical models. Is the observed trend mere chance or is it a significant result worthy of more scrutiny. The right set of assumptions making up a \textit{probability model}, are not always apparent given the dataset.
 
-\textbf{Popluation} : the set of all possible elements that can be scrutinized. In real-world examples, the population is usually too large to be analyzed in full. \\
+\textbf{Popluation} : the set of all possible elements that can be scrutinized. In real-world examples, the population is usually too large to be analyzed in full.
 
-\textbf{Sample} : a small subsection of the population that is supposedly a good representation of the properties of the population itself. Random sampling is crucial for the inferred population statistics to be useful. \\
+\textbf{Sample} : a small subsection of the population that is supposedly a good representation of the properties of the population itself. Random sampling is crucial for the inferred population statistics to be useful.
 
-\textbf{Applications throughout history} : Surveying populations in order to calculate men available for military enlistment, taxable populations, and insurance contracts. Astronomy, physics, anthropology, demography, sociology and many other contemporary fields of study depend on the advancements in statistics over the $ 18^{th} $ and $19^{th}$ centuries. \\
+\textbf{Applications throughout history} : Surveying populations in order to calculate men available for military enlistment, taxable populations, and insurance contracts. Astronomy, physics, anthropology, demography, sociology and many other contemporary fields of study depend on the advancements in statistics over the $ 18^{th} $ and $19^{th}$ centuries.
 
-\textbf{Relation to probability theory} : probability theory was largely divorced from statistics until the late $ 19^{th} $ century. The study of probability was necessary to develop inferential statistics and begin to apply statistics to business, medicine, and politics. \\
+\textbf{Relation to probability theory} : probability theory was largely divorced from statistics until the late $ 19^{th} $ century. The study of probability was necessary to develop inferential statistics and begin to apply statistics to business, medicine, and politics.
 
 \newpage
 
