--- a/TeX_files/exercise01_new.tex
+++ b/TeX_files/exercise01_new.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction to Statistics}
 
 \begin{enumerate}
-	\item Sample A is biased in favor of young people. \\ Sample B is biased in favor of wealthy people.  \\ Sample C is likely to be representative. \\ Sample D is biased in favor of people watching the particular channel. \\ Sample E involves the user choosing names and is therefore bad.
+	\item Sample A is biased in favor of young people. Sample B is biased in favor of wealthy people.  \\ Sample C is likely to be representative. Sample D is biased in favor of people watching the particular channel. Sample E involves the user choosing names and is therefore bad.
 	
 	\item The proportion of voters in 1936 owning automobiles or telephones would have been extremely biased in favor of the wealthy. This sampling bias led to the incorrect prediction.
 	
