--- a/TeX_files/exercise06_new.tex
+++ b/TeX_files/exercise06_new.tex
@@ -4,7 +4,7 @@
 	
 	\item 
 		\begin{enumerate}
-			\item Let $ Y = (X_1 + X_2) / 2 $. This gives the following joint PMF for $ Y $,\\
+			\item Let $ Y = (X_1 + X_2) / 2 $. This gives the following joint PMF for $ Y $,
 			\begin{table}[H]
 				\centering
 				\begin{tabular}{@{}rrrrr@{}}
@@ -42,17 +42,17 @@
 				\mathbb{E}[Y^2] &= \sum\limits_{i} i^2\ \times P\left\{Y = i\right\} = 4.02 \nonumber \\
 				%
 				\mathrm{Var}(Y) &= 4.02 - (1.8)^2 = 0.78
-			\end{align}\\
+			\end{align}
 			
-			Alternatively, using the new sample mean and variance formulae, \\
+			Alternatively, using the new sample mean and variance formulae,
 			
 			\begin{align}
 				\mathbb{E}[X_i] &= 1.8 & \mathrm{Var}(X_i) &= 4.8 - 1.8^2 = 1.56 \\
 				%
 				\mathbb{E}[\overline{X}] &= \mathbb{E}[X_i] = 1.8  &\mathrm{Var}(\overline{X}) &= \mathrm{Var}(X_i) / 2 = 0.78
-			\end{align}\\
+			\end{align}
 			
-			\item Let $ Z = (X_1 + X_2 + X_3) / 3 $. The PMF of $ Z $ is given by \\
+			\item Let $ Z = (X_1 + X_2 + X_3) / 3 $. The PMF of $ Z $ is given by
 			\begin{table}[H]
 				\centering
 				\begin{tabular}{@{}rrrrr@{}}
@@ -73,13 +73,13 @@
 				\end{tabular}
 			\end{table}
 			
-			\item Using the new sample mean and variance formulae, \\
+			\item Using the new sample mean and variance formulae,
 			
 			\begin{align}
 				\mathbb{E}[X_i] &= 1.8 & \mathrm{Var}(X_i) &= 4.8 - 1.8^2 = 1.56 \\
 				%
 				\mathbb{E}[\overline{Z}] &= \mathbb{E}[X_i] = 1.8  &\mathrm{Var}(\overline{Z}) &= \mathrm{Var}(X_i) / 3 = 0.52
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	
 	
@@ -92,15 +92,15 @@
 			\mathbb{E}[Y] &= 35 		& \mathrm{Var}(Y) &= 350/12 
 		\end{align}
 		
-		Using central limit theorem with continuity correction, \\
+		Using central limit theorem with continuity correction,
 		\begin{align}
 			P\left\{29.5 \leq Y \leq 40.5 \right\} &= P\left\{\frac{29.5 - 35}{\sqrt{350/12}} \leq Z \leq \frac{40.5 - 35}{\sqrt{350/12}}\right\} \nonumber \\
 			%
 			&= \Phi \left( \frac{40.5 - 35}{\sqrt{350/12}} \right) - \Phi\left(\frac{29.5 - 35}{\sqrt{350/12}}\right) = 0.6915
-		\end{align} \\
+		\end{align}
 	
 	
-	\item 16 independent standard uniform RV. Let $ Y = \sum X_i  $. \\
+	\item 16 independent standard uniform RV. Let $ Y = \sum X_i  $.
 	
 		\begin{align}
 			P \left\{Y > 10 \right\} &= P \left\{ \overline{X} > 10/16 \right\} \nonumber \\
@@ -108,7 +108,7 @@
 			&= P \left\{ \frac{4\ (\overline{X} - 0.5)}{\sqrt{1/12}}> \frac{1/2}{\sqrt{1/12}} \right\} \nonumber \\
 			%
 			&= 1 - \Phi\left( \frac{1/2}{\sqrt{1/12}} \right) = 0.0416
-		\end{align}\\
+		\end{align}
 	
 	
 	\item 
@@ -124,7 +124,7 @@
 				\mathbb{E}[Y] &= n\mu \qquad \mathrm{Var}(Y) = n\sigma^2 \nonumber \\
 				%
 				P \left\{ Y > 0 \right\} &= 1 - \Phi \left( \frac{0 - n\mu}{\sqrt{n\sigma^2}} \right) \nonumber
-			\end{align}\\
+			\end{align}
 			
 			\item The fact that the expected value of a single bet is negative means that it is more difficult to remain positive as the number of bets increases.
 			\begin{align}
@@ -133,7 +133,7 @@
 				n = 1000 &\to P \left\{ Y > 0 \right\} = 0.3863 \nonumber \\
 				%
 				n = 100000 &\to P \left\{ Y > 0 \right\} = 0.0019 \nonumber
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	 
 	
@@ -147,16 +147,16 @@
 				P \left\{ Y \leq 80 \right\} &= P \left\{Z \leq \frac{80 - n\mu}{\sqrt{n\sigma^2}} \right\} \nonumber \\
 				%
 				&= \Phi \left(\frac{80 - 75}{\sqrt{50\ (0.3)^2}}\right) = 0.9908
-			\end{align}\\
+			\end{align}
 			
-			\item Assume snowfall on each day is independent.\\
+			\item Assume snowfall on each day is independent.
 			
-			\item Assumption is bad since current weather events are usually dependent on the weather conditions of the past days.\\
+			\item Assumption is bad since current weather events are usually dependent on the weather conditions of the past days.
 			
 		\end{enumerate}
 	 
 	
-	\item 50 independent uniform RV in the range $ [-0.5, 0.5] $. Let $ Y = \sum X_i  $. \\
+	\item 50 independent uniform RV in the range $ [-0.5, 0.5] $. Let $ Y = \sum X_i  $.
 	
 		\begin{align}
 			P \left\{Y > 3 \right\} &= P \left\{ \overline{X} > 0.06 \right\} \nonumber \\
@@ -166,7 +166,7 @@
 			&= 1 - \Phi\left( \frac{0.06 \sqrt{50}}{\sqrt{1/12}} \right) = 0.0708 \nonumber \\
 			%
 			P \left\{|Y| > 3 \right\} &= 2 \times P \left\{Y > 3 \right\} = 0.1416
-		\end{align}\\
+		\end{align}
 	
 	
 	\item $ \mu = 7/2 $ and $ \sigma^2 = 35/12 $. Let $ n = 140 $ , Let $ Y = \sum X_i $\\
@@ -175,11 +175,11 @@
 			P \left\{Y < 400 \right\} &= P \left\{ Z < \frac{(400 - 490)}{\sqrt{35/12 \times 140}} \right\} \nonumber \\
 			%
 			&= \Phi (-4.4538) \approx 0
-		\end{align}\\
+		\end{align}
 	
 	
-	\item $ \mathbb{E}[X_i] = 5 $ and $ \mathrm{Var}(X_i) = 2.25 $. Lifetime of 12 batteries has to be less than a year.\\
-	Let $ Y = \sum^n_1 X_i $. At $ n = 12 $ , \\
+	\item $ \mathbb{E}[X_i] = 5 $ and $ \mathrm{Var}(X_i) = 2.25 $. Lifetime of 12 batteries has to be less than a year.
+	Let $ Y = \sum^n_1 X_i $. At $ n = 12 $ ,
 	
 		\begin{align}
 			P \left\{Y < 52 \right\} &= P \left\{ \overline{X} \leq 52/12 \right\} \nonumber \\
@@ -187,10 +187,10 @@
 			&= P \left\{ Z \leq \frac{\sqrt{12}\ (52/12 - 5)}{1.5} \right\} \nonumber \\
 			%
 			&= 0.0618 \nonumber 
-		\end{align}\\
+		\end{align}
 	
 	
-	\item $ \mu = 100 $ and $ \sigma = 20 $. Let $ n = 16 $ , \\
+	\item $ \mu = 100 $ and $ \sigma = 20 $. Let $ n = 16 $ ,
 	
 		\begin{align}
 			P \left\{\overline{X} < 104 \right\} &= P \left\{ Z < \frac{\sqrt{16}\ (104 - 100)}{20} \right\} \nonumber \\
@@ -200,19 +200,19 @@
 			P \left\{98 < \overline{X} < 104 \right\} &= P \left\{ \frac{\sqrt{16}\ (98 - 100)}{20} < Z < \frac{\sqrt{16}\ (104 - 100)}{20} \right\} \nonumber \\
 			%
 			&= \Phi (0.8) - \Phi(-0.4) = 0.4436
-		\end{align}\\
+		\end{align}
 	
 	
-	\item $ \mu = 2.2 $ and $ \sigma = 0.3 $. Let $ n = 100 $ , \\
+	\item $ \mu = 2.2 $ and $ \sigma = 0.3 $. Let $ n = 100 $ ,
 	
 		\begin{align}
 			P \left\{\overline{X} > 3.1 \right\} &= P \left\{ Z > \frac{\sqrt{100}\ (3.1 - 2.2)}{0.3} \right\} \nonumber \\
 			%
 			&= 1 - \Phi (9/0.3) \approx 0  
-		\end{align}\\
+		\end{align}
 	
 	
-	\item $ \mu = 500 $ and $ \sigma = 80 $. Let $ n $ vary and check probability, \\
+	\item $ \mu = 500 $ and $ \sigma = 80 $. Let $ n $ vary and check probability,
 	
 		\begin{align}
 			P \left\{\overline{X} > 525 \right\} &= P \left\{ Z > \frac{\sqrt{n}\ (525 - 500)}{80} \right\} \\
@@ -224,64 +224,64 @@
 			n = 36 &\to P = 1 - \Phi(15/8) = 0.0304 \nonumber \\
 			%
 			n = 64 &\to P = 1 - \Phi(2.5) = 0.00621 \nonumber 
-		\end{align}\\
+		\end{align}
 	
 	
-	\item $ \mu = 77$ and $ \sigma = 15 $. Let $ n = 25, 64 $ for the class average test scores $ Y, Z $ respectively, \\
+	\item $ \mu = 77$ and $ \sigma = 15 $. Let $ n = 25, 64 $ for the class average test scores $ Y, Z $ respectively,
 	
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{72 < Y < 82 \right\} &= P \left\{ \frac{\sqrt{25}\ (72 - 77)}{15} Z < \frac{\sqrt{25}\ (82 - 77)}{15} \right\} \nonumber \\
 				%
 				&= \Phi (5/3) - \Phi (-5/3) = 0.9044
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{72 < Z < 82 \right\} &= P \left\{ \frac{\sqrt{64}\ (72 - 77)}{15} Z < \frac{\sqrt{64}\ (82 - 77)}{15} \right\} \nonumber \\
 				%
 				&= \Phi (8/3) - \Phi (-8/3) = 0.9923
-			\end{align}\\
+			\end{align}
 			
 			\item Let $ W = Y - Z $, now, $ \mathbb{E}[W] = 0$, and $ \mathrm{Var}(W) = \sigma^2 (1/25 + 1/64) $\\
 			\begin{align}
 				P \left\{Y > Z \right\} &= P \left\{ W > 0 \right\} = \left\{ Z > \frac{(0 - 0)}{\sqrt{15*89/1600}} \right\} \nonumber \\
 				%
 				&= \Phi (0) = 0.5
-			\end{align}\\
+			\end{align}
 			
 			\item The larger class has a smaller variance and is therefore, less likely have an average far from the mean. Thus, the smaller class is likelier to have a class average of 83.
 		\end{enumerate}
 	
 	
-	\item Binomial RV with $ n = 150$ and $ p = 0.6 $. \\
+	\item Binomial RV with $ n = 150$ and $ p = 0.6 $.
 	
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{X \leq 80 \right\} &=  \sum\limits_{k=0}^{80} \binom{150}{k}\ 0.6^k\ 0.4^{1-k}\nonumber \\
 				%
 				&= 0.05746
-			\end{align}\\
+			\end{align}
 			
-			\item approximating using normal RV without continuity correction, \\
+			\item approximating using normal RV without continuity correction,
 			\begin{align}
 				P \left\{X \leq 80 \right\} &= P \left\{ \frac{X - np}{\sqrt{np(1-p)}} \leq \frac{(80 - 90)}{6} \right\} \nonumber \\
 				%
 				&= 0.04779
-			\end{align}\\
+			\end{align}
 			
 			\item with continuity correction\\
 			\begin{align}
 				P \left\{X \leq 80.5 \right\} &= P \left\{ \frac{X - np}{\sqrt{np(1-p)}} \leq \frac{(80.5 - 90)}{6} \right\} \nonumber \\
 				%
 				&= 0.056673
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	
 	
-	\item Let $ A_2, A_3, A_4 $ denote the number of games that $ A $ wins against $ B, C, D $ respectively.\\
+	\item Let $ A_2, A_3, A_4 $ denote the number of games that $ A $ wins against $ B, C, D $ respectively.
 	
 		\begin{enumerate}
-			\item Looking at a table of the win probabilities,\\
+			\item Looking at a table of the win probabilities,
 			
 			\begin{table}[H]
 				\centering
@@ -305,9 +305,9 @@
 				P\left\{ A_2 + A_3 + A_4 > 20 \right\} &= P \left\{ Z > \frac{20 - 20.5}{\sqrt{6.375}} \right\} \nonumber \\
 				%
 				&= 1 - \Phi \left( \frac{20 - 20.5}{\sqrt{6.375}} \right) = 0.5785
-			\end{align}\\
+			\end{align}
 			
-			\item Yes $ X, Y, Z $ are independent, \\
+			\item Yes $ X, Y, Z $ are independent,
 			
 			\item $ X + Y \geq (10-X) + Z $ \\
 			
@@ -322,18 +322,18 @@
 				P \left\{W \geq 10 \right\} &= P \left\{ Z \geq \frac{(10 - 6.5)}{\sqrt{18.075}} \right\} \nonumber \\
 				%
 				&= 0.2052
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	
 	
 	\item
 	
 		\begin{enumerate}
-			\item No, because it is the sum of binomial variables with different $ n $ and $ p $.\\
+			\item No, because it is the sum of binomial variables with different $ n $ and $ p $.
 			
-			\item $ X_1, X_2 $ are binomial with parameters $ (32, 0.5), \ (28, 0.7) $ respectively.\\
+			\item $ X_1, X_2 $ are binomial with parameters $ (32, 0.5), \ (28, 0.7) $ respectively.
 			
-			\item $ X = X_1 + X_2 $.\\
+			\item $ X = X_1 + X_2 $.
 			
 			\item with continuity correction\\
 			\begin{align}
@@ -344,14 +344,14 @@
 				P \left\{X \geq 39.5 \right\} &= P \left\{ Z \geq \frac{(39.5 - 35.6)}{\sqrt{13.88}} \right\} \nonumber \\
 				%
 				&= 0.1478
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	
 	
 	\item
 	
 		\begin{enumerate}
-			\item Let $ X_1, X_2 $ be Poisson RVs with  means $ \lambda_1, \lambda_2 $.\\
+			\item Let $ X_1, X_2 $ be Poisson RVs with  means $ \lambda_1, \lambda_2 $.
 			
 			\begin{align}
 				\phi (t) &= \mathbb{E}[e^{tX}] = \mathbb{E}[e^{t(X_1 + X_2)}] \nonumber \\[1ex]
@@ -359,17 +359,17 @@
 				&= \mathbb{E}[e^{tX_1}] \mathbb{E}[e^{tX_2}] \nonumber \\[1ex]
 				%
 				&= \exp\left\{(\lambda_1 + \lambda_2) (e^t - 1)\right\}
-			\end{align} \\
+			\end{align}
 			
-			Thus, a Poisson RV with large $\lambda$ can be considered the sum of many Poisson RVs with individually small rates summed together. Central limit theorem applies to this sum of many RVs to give an approximately normal RV with mean and variance both $ \lambda $ as output.\\
+			Thus, a Poisson RV with large $\lambda$ can be considered the sum of many Poisson RVs with individually small rates summed together. Central limit theorem applies to this sum of many RVs to give an approximately normal RV with mean and variance both $ \lambda $ as output.
 			
-			\item Let $ \lambda = 100 $. Using the exact Poisson process,\\
+			\item Let $ \lambda = 100 $. Using the exact Poisson process,
 			
 			\begin{align}
 				P \left\{X \leq 116 \right\} &= \sum\limits_{k=0}^{116} e^{-100}\ \frac{100^k}{k!} \nonumber \\
 				%
 				&= 0.9478
-			\end{align} \\
+			\end{align}
 			
 			\item Using the central limit theorem and the resulting normal RV with $ \mu = \sigma^2 = \lambda $
 			
@@ -381,28 +381,28 @@
 				P \left\{X \leq 116.5 \right\} &= P \left\{ Z \leq \frac{(116.5 - 100)}{\sqrt{100}} \right\} \nonumber \\
 				%
 				&= 0.9505
-			\end{align} \\
+			\end{align}
 		\end{enumerate}
 	
 	
 	\item
 	
 		\begin{enumerate}
-			\item Let $ X $ be Binomial RVs with  $ n = 100, p = 0.1 $.\\
+			\item Let $ X $ be Binomial RVs with  $ n = 100, p = 0.1 $.
 			
 			\begin{align}
 				P \left\{X \leq 10 \right\} &= \sum\limits_{k=0}^{10} \binom{10}{k}\ 0.1^k\ 0.9^{1-k} \nonumber \\
 				%
 				&= 0.5832
-			\end{align} \\
+			\end{align}
 			
-			\item Using a Poisson RV with $ \lambda = np $,\\
+			\item Using a Poisson RV with $ \lambda = np $,
 			
 			\begin{align}
 				P \left\{X \leq 10 \right\} &= \sum\limits_{k=0}^{10} e^{-10}\ \frac{10^k}{k!} \nonumber \\
 				%
 				&= 0.5830
-			\end{align} \\
+			\end{align}
 			
 			\item Using a normal RV with $ \mu = np$ and $ \sigma = np(1-p) $
 			
@@ -410,7 +410,7 @@
 				P \left\{X \leq 10.5 \right\} &= P \left\{ Z \leq \frac{(10.5 - 10)}{\sqrt{9}} \right\} \nonumber \\
 				%
 				&= 0.5662
-			\end{align} \\
+			\end{align}
 		\end{enumerate}
 	
 	
@@ -422,14 +422,14 @@
 				P \left\{S^2 / \sigma^2 \leq 1.8 \right\} &= P \left\{(5-1)\ S^2 / \sigma^2 \leq 7.2 \right\} \nonumber \\
 				%
 				P \left\{\chi_5^2 \leq 7.2 \right\} &= 0.7938
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{0.85 \leq S^2 / \sigma^2 \leq 1.15 \right\} &= P \left\{3.4 \leq (5-1)\ S^2 / \sigma^2 \leq 4.6 \right\} \nonumber \\
 				%
 				P \left\{3.4 \leq \chi_5^2 \leq 4.6 \right\} &= 0.1719
-			\end{align} \\
+			\end{align}
 			
 		\end{enumerate}
 	
@@ -458,7 +458,7 @@
 			\frac{S_2^2}{S_1^2} &\geq 1 \qquad F_{4, 9} \geq 2 \nonumber \\
 			%
 			P  \left\{\frac{S_2^2}{S_1^2}  \geq 1\right\}  &= P \left\{F_{4, 9} \geq 2\right\}= 0.1782
-		\end{align}\\
+		\end{align}
 	
 	
 	\item $ n = 100, p  = 0.12$. Using the normal RV approximation with $ \mu = np = 12 $ and $ \sigma^2 = np(1-p)$ \\
@@ -470,7 +470,7 @@
 			&= \Phi  \left(\frac{(14.5 - 12)}{\sqrt{12*0.88}}\right) - \Phi  \left(\frac{(9.5 - 12)}{\sqrt{12*0.88}}\right)  \nonumber \\
 			%
 			&= 0.5583
-		\end{align}\\
+		\end{align}
 	
 	
 	\item Each human is a binomial RV with $ p = 0.52 $. Let $ n $ vary and check probability including continuity correction\\
@@ -485,7 +485,7 @@
 			n = 1000 &\to P = 0.9028 \nonumber \\
 			%
 			n = 10000 &\to P = 0.99997 \nonumber 
-		\end{align}\\
+		\end{align}
 	
 	
 	\item $ n = 300 $ men. $ c = 0.454, b = 0.284 $ \\
@@ -496,14 +496,14 @@
 				P \left\{X \geq 150 \right\} &= P \left\{Z \geq \frac{149.5 - 136.2}{\sqrt{300*0.454*0.546}} \right\} \nonumber \\
 				%
 				&= 0.0615
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{Y \leq 100 \right\} &= P \left\{Z \leq \frac{100.5 - 85.2}{\sqrt{300*0.284*0.716}} \right\} \nonumber \\
 				%
 				&= 0.9749
-			\end{align} \\
+			\end{align}
 			
 		\end{enumerate}
 	
@@ -516,29 +516,29 @@
 				P \left\{V \geq 60 \right\} &= P \left\{Z \geq \frac{59.5 - 76.8}{\sqrt{300*0.256*0.744}} \right\} \nonumber \\
 				%
 				&= 0.9889
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{U \leq 50 \right\} &= P \left\{Z \leq \frac{50.5 - 64.2}{\sqrt{300*0.214*0.786}} \right\} \nonumber \\
 				%
 				&= 0.0269
-			\end{align} \\
+			\end{align}
 			
 		\end{enumerate}
 	
 	
-	\item More women than men rarely eat breakfast.\\
+	\item More women than men rarely eat breakfast.
 	$ \mathbb{E}[X-Y] = -10.2 $, and $\mathrm{Var}(X-Y) = 147.4452$\\
 	
 		\begin{align}
 			P \left\{X > Y \right\} &= P \left\{ X - Y > 0 \right\} \nonumber \\
 			%
 			&= P \left\{ Z > \frac{0 + 10.2}{\sqrt{147.4452}}  \right\} = 0.2005
-		\end{align} \\
+		\end{align}
 	
 	
-	\item $ n = 1000 $ , $ p $ from the table as necessary. \\
+	\item $ n = 1000 $ , $ p $ from the table as necessary.
 	
 		\begin{enumerate}
 			\item 			
@@ -546,14 +546,14 @@
 				P \left\{A \geq 500 \right\} &= P \left\{Z \geq \frac{500 - 542}{\sqrt{248.236}} \right\} \nonumber \\
 				%
 				&= 1 - \Phi \left( \frac{500 - 542}{\sqrt{248.236}} \right) = 0.9962
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{B > 500 \right\} &= P \left\{Z > \frac{500 - 704}{\sqrt{208.384}} \right\} \nonumber \\
 				%
 				&= 1 - \Phi \left( \frac{500 - 704}{\sqrt{208.384}} \right) \approx 1
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
@@ -562,28 +562,28 @@
 				&= 1 - \Phi \left( \frac{500 - 458}{\sqrt{248.236}} \right) = 0.00384 \nonumber \\
 				%
 				P\left\{ \text{required} \right\} &= 0.00384 * 1 = 0.00384
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{D < 250 \right\} &= P \left\{Z < \frac{250 - 293}{\sqrt{207.151}} \right\} \nonumber \\
 				%
 				&= \Phi \left( \frac{250 - 293}{\sqrt{207.151}} \right) = 0.0014
-			\end{align} \\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{E \geq 200 \right\} &= P \left\{Z \geq \frac{200 - 149}{\sqrt{126.799}} \right\} \nonumber \\
 				%
 				&= 1 - \Phi \left( \frac{200 - 149}{\sqrt{126.799}} \right) \approx 0
-			\end{align} \\
+			\end{align}
 			
 			\item Let $ F = F_1 - F_2 $, with $ \mathbb{E}[F] = 31$, $ \mathrm{Var}[F] = 253.819$
 			\begin{align}
 				P \left\{F_1 - F_2 \geq 0 \right\} &= P \left\{Z \geq \frac{0 - 31}{\sqrt{253.819}} \right\} \nonumber \\
 				%
 				&= 1 - \Phi \left( \frac{0 - 31}{\sqrt{253.819}} \right) = 0.9742
-			\end{align} \\
+			\end{align}
 			
 		\end{enumerate}
 	
@@ -595,7 +595,7 @@
 			P \left\{X = 0 \right\} &= (1-p)^5 = 0.5743 \\
 			%
 			P \left\{Y = 0 \right\} &= (1-q)^5 = 0.3256
-		\end{align} \\
+		\end{align}
 	
 	
 	\item $ n = 144 $ women. $ \mu = 517, \sigma = 120 $ \\
@@ -606,14 +606,14 @@
 				P \left\{\overline{X} > 507 \right\} &= P \left\{Z > \frac{507 - 517}{120/12} \right\} \nonumber \\
 				%
 				&= 1 - \Phi (-10/10) = 0.8413
-			\end{align} \\
+			\end{align}
 			
 			\item 			
 			\begin{align}
 				P \left\{\overline{X} > 517 \right\} &= P \left\{Z > \frac{517 - 517}{120/12} \right\} \nonumber \\
 				%
 				&= 1 - \Phi (0/10) = 0.5
-			\end{align} \\
+			\end{align}
 			
 			
 			\item 			
@@ -621,14 +621,14 @@
 				P \left\{\overline{X} > 537 \right\} &= P \left\{Z > \frac{537 - 517}{120/12} \right\} \nonumber \\
 				%
 				&= 1 - \Phi (20/10) = 0.0227
-			\end{align} \\
+			\end{align}
 			
 			\item 			
 			\begin{align}
 				P \left\{\overline{X} > 550 \right\} &= P \left\{Z > \frac{550 - 517}{120/12} \right\} \nonumber \\
 				%
 				&= 1 - \Phi (33/10) = 0.00048
-			\end{align} \\
+			\end{align}
 			
 		\end{enumerate}
 	
@@ -640,7 +640,7 @@
 			P \left\{\overline{X} > 55000 \right\} &= P \left\{Z > \frac{55000 - 53600}{3200/\sqrt{12}} \right\} \nonumber \\
 			%
 			&= 0.0648
-		\end{align} \\
+		\end{align}
 	
 	
 	\item $ n = $ is to be found. $ \mu = 100, \sigma = 30 $. Let $ Y = \sum X_i $ \\
@@ -654,7 +654,7 @@
 			2000 - 100\ n &\leq -1.6448 \times 30\sqrt{n} \nonumber \\
 			%
 			n &\geq 23
-		\end{align} \\
+		\end{align}
 		
 		\begin{figure}[H]
 			\centering
