--- a/TeX_files/exercise08.tex
+++ b/TeX_files/exercise08.tex
@@ -3,13 +3,13 @@
 \begin{enumerate}
 	
 	\item 	\begin{enumerate}
-			\item The null hypothesis should be innocence.\\
+			\item The null hypothesis should be innocence.
 			
 			\item The significance level should be 1\% or smaller, in the spirit of \\
 			``innocent until proven guilty beyond a reasonable doubt.''
 		\end{enumerate}
 	
-	\item $ \overline{X} = 30.4 ,\ \sigma = 4,\ \mu_0 = 32,\ \alpha = 0.05,\ n = 25$. Performing the z-test gives,\\
+	\item $ \overline{X} = 30.4 ,\ \sigma = 4,\ \mu_0 = 32,\ \alpha = 0.05,\ n = 25$. Performing the z-test gives,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -17,11 +17,11 @@
 			T &= \frac{\sqrt{n}}{\sigma}\ |\overline{X} - \mu_0| = 2 \nonumber \\
 			%
 			p &= P_{H_0}\left\{|Z| > |T|\right\} = 4.55\% 
-		\end{align}\\
-	Since $ p < \alpha $, the null hypothesis $ H_0 $ is rejected at 5\% significance.\\
+		\end{align}
+	Since $ p < \alpha $, the null hypothesis $ H_0 $ is rejected at 5\% significance.
 	\end{subequations}
 
-	\item $ \sigma = 20,\ \mu_0 = 50,\ \alpha = 0.05,\ n = 64$. $ \overline{X} $ changes, with changing $ p $-value,\\
+	\item $ \sigma = 20,\ \mu_0 = 50,\ \alpha = 0.05,\ n = 64$. $ \overline{X} $ changes, with changing $ p $-value,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -33,10 +33,10 @@
 			\overline{X} = 55.0 \to p &= P_{H_0}\left\{|Z| > |T|\right\} = 4.55\% \nonumber \\
 			%
 			\overline{X} = 57.5 \to p &= P_{H_0}\left\{|Z| > |T|\right\} = 0.27\% 
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item $ \sigma = 0.02,\ \mu_0 = 8.2,\ \alpha = (0.05, 0.1),\ n = 10$. Performing the z-test gives,\\
+	\item $ \sigma = 0.02,\ \mu_0 = 8.2,\ \alpha = (0.05, 0.1),\ n = 10$. Performing the z-test gives,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -44,11 +44,11 @@
 			T &= \frac{\sqrt{n}}{\sigma}\ |\overline{X} - \mu_0| = 3.32 \nonumber \\
 			%
 			p &= P_{H_0}\left\{|Z| > |T|\right\} = 0.1\% 
-		\end{align}\\
-		Since $ p < \alpha $,  for both values of $ \alpha = 10\%, 5\% $ the null hypothesis $ H_0 $ is rejected.\\
+		\end{align}
+		Since $ p < \alpha $,  for both values of $ \alpha = 10\%, 5\% $ the null hypothesis $ H_0 $ is rejected.
 	\end{subequations}
 
-	\item $ \sigma = 5,\ \mu_0 = 200,\ \alpha = (0.05, 0.1),\ n = 8$. Performing the z-test gives,\\
+	\item $ \sigma = 5,\ \mu_0 = 200,\ \alpha = (0.05, 0.1),\ n = 8$. Performing the z-test gives,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu \geq \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu < \mu_0 \nonumber \\
@@ -56,11 +56,11 @@
 			T &= \frac{\sqrt{n}}{\sigma}\ |\overline{X} - \mu_0| = -0.5020 \nonumber \\
 			%
 			p &= P_{H_0}\left\{Z \leq T\right\} = 30.78\% 
-		\end{align}\\
-		Since $ p > \alpha $,  for both values of $ \alpha = 10\%, 5\% $ the null hypothesis $ H_0 $ is accepted.\\
+		\end{align}
+		Since $ p > \alpha $,  for both values of $ \alpha = 10\%, 5\% $ the null hypothesis $ H_0 $ is accepted.
 	\end{subequations}
 
-	\item $ \sigma = 3,\ \mu_0 = 70,\ \alpha = 0.05,\ n = 20$. Performing the z-test gives $ \overline{X} = 72.015 $,\\
+	\item $ \sigma = 3,\ \mu_0 = 70,\ \alpha = 0.05,\ n = 20$. Performing the z-test gives $ \overline{X} = 72.015 $,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -68,14 +68,14 @@
 			T &= \frac{\sqrt{n}}{\sigma}\ |\overline{X} - \mu_0| = 3.004 \nonumber \\
 			%
 			p &= P_{H_0}\left\{Z \leq T\right\} = 0.26\% 
-		\end{align}\\
-		Since $ p < 1\% $, the null hypothesis $ H_0 $ is safely rejected. Assuming each person's height is i.i.d as a normal RV.\\
+		\end{align}
+		Since $ p < 1\% $, the null hypothesis $ H_0 $ is safely rejected. Assuming each person's height is i.i.d as a normal RV.
 	\end{subequations}
 	 
-	\item $ \sigma = 0.02,\ \mu_0 = 8.2,\ \alpha = 0.05$. Performing the z-test gives,\\
+	\item $ \sigma = 0.02,\ \mu_0 = 8.2,\ \alpha = 0.05$. Performing the z-test gives,
 	\begin{subequations}
 		\begin{enumerate}
-			\item The test used has to satisfy these conditions,\\
+			\item The test used has to satisfy these conditions,
 			\begin{align}
 				H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
 				%
@@ -84,14 +84,14 @@
 				\text{reject $ H_0 $ if } \qquad & T > \texttt{stats.norm.ppf}(1-\alpha/2) \nonumber \\
 				%
 				&\to T > 1.96
-			\end{align}\\
+			\end{align}
 	
 			\item Using the formula for approximate sample size, with $ \alpha = 0.05,$ \\
 			$ \beta = 0.05,\ |\mu_1 - \mu_0| = 0.03 = 1.5\sigma $\\
 			\begin{align}
 				n &\approx \frac{\sigma^2\ (z_{\alpha/2} + z_\beta)^2}{(\mu_1 - \mu_0)^2} = \frac{4}{9}\ (1.96 + 1.65)^2 = 5.77
 			\end{align}
-			The smallest sample size needed to guarantee the two stated conditions is n = 6.\\
+			The smallest sample size needed to guarantee the two stated conditions is n = 6.
 			
 			\item $ \overline{X} = 8.31 $, then\\
 			\begin{align}
@@ -107,7 +107,7 @@
 			
 			This is clearly a rejection of $ H_0 $\\
 			
-			\item The probability of rejection when the true mean is $ \mu_1 $ is,\\
+			\item The probability of rejection when the true mean is $ \mu_1 $ is,
 			
 			\begin{align}
 				1 - \beta &= 1 - \Phi\left(\frac{\mu_0 - \mu_1}{\sigma/\sqrt{n}} + z_{\alpha/2}\right) \nonumber \\
@@ -126,13 +126,13 @@
 			\Phi(z_\beta) &= \Phi\left(\frac{\mu_0 - \mu_1}{\sigma/\sqrt{n}} - z_{\alpha/2}\right) \nonumber \\
 			%
 			n &\approx \frac{\sigma^2\ (z_{\alpha/2} + z_\beta)^2}{(\mu_1 - \mu_0)^2}
-		\end{align}\\
+		\end{align}
 		\end{subequations}
 	
 	\item If time taken to enter bloodstream is $ t $ \\
 	$ H_0 : t \geq 10 $ while $ H_1 : t < 10 $ \\
 	
-	\item $ \sigma = 1.2,\ \mu_0 = 7.6,\ \alpha = (0.05, 0.01),\ n = 16,\ \overline{X} = 7.2$. Performing the z-test gives,\\
+	\item $ \sigma = 1.2,\ \mu_0 = 7.6,\ \alpha = (0.05, 0.01),\ n = 16,\ \overline{X} = 7.2$. Performing the z-test gives,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu \geq \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu < \mu_0 \nonumber \\
@@ -140,11 +140,11 @@
 			T &= \frac{\sqrt{n}}{\sigma}\ |\overline{X} - \mu_0| = -1.33 \nonumber \\
 			%
 			p &= P_{H_0}\left\{Z \leq T\right\} = 9.12\% 
-		\end{align}\\
-		Since $ p > \alpha $,  for both values of $ \alpha = 5\%, 1\% $ the null hypothesis $ H_0 $ is accepted.\\
+		\end{align}
+		Since $ p > \alpha $,  for both values of $ \alpha = 5\%, 1\% $ the null hypothesis $ H_0 $ is accepted.
 	\end{subequations}
 
-	\item $ \overline{X} = 105,\ \mu_0 = 100,\ n = 20$. $ \overline{X} $ changes, with changing $ \sigma $-value,\\
+	\item $ \overline{X} = 105,\ \mu_0 = 100,\ n = 20$. $ \overline{X} $ changes, with changing $ \sigma $-value,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu \leq \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu > \mu_0 \nonumber \\
@@ -156,10 +156,10 @@
 			\sigma = 10 \to p &= P_{H_0}\left\{Z > T\right\} = 1.26\% \nonumber \\
 			%
 			\sigma = 15 \to p &= P_{H_0}\left\{Z > T\right\} = 6.8\% 
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item $ \sigma = 1,\ \mu_0 = 3,\ \alpha = 0.05,\ n = 2500$. Performing the z-test gives $ \overline{X} = 2.95 $,\\
+	\item $ \sigma = 1,\ \mu_0 = 3,\ \alpha = 0.05,\ n = 2500$. Performing the z-test gives $ \overline{X} = 2.95 $,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu \geq \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu < \mu_0 \nonumber \\
@@ -167,12 +167,12 @@
 			T &= \frac{\sqrt{n}}{\sigma}\ |\overline{X} - \mu_0| = -2.5 \nonumber \\
 			%
 			p &= P_{H_0}\left\{Z \leq T\right\} = 0.62\% 
-		\end{align}\\
-		Since $ p < 5\% $, the null hypothesis $ H_0 $ is safely rejected and the toothpaste works.\\
-		Unfortunately, the reduction in cavities is significant but very slight and thus not very convincing to potential customers.\\
+		\end{align}
+		Since $ p < 5\% $, the null hypothesis $ H_0 $ is safely rejected and the toothpaste works.
+		Unfortunately, the reduction in cavities is significant but very slight and thus not very convincing to potential customers.
 	\end{subequations}
 
-	\item $ S = 1.3,\ \mu_0 = 20,\ \alpha = 0.05,\ n = 25$. Performing the z-test gives $ \overline{X} = 19.7 $,\\
+	\item $ S = 1.3,\ \mu_0 = 20,\ \alpha = 0.05,\ n = 25$. Performing the z-test gives $ \overline{X} = 19.7 $,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -180,11 +180,11 @@
 			T &= \frac{\sqrt{n}}{S}\ |\overline{X} - \mu_0| = 1.15 \nonumber \\
 			%
 			p &= P_{H_0}\left\{t \geq |T|\right\} = 26\% 
-		\end{align}\\
-		Since $ p > 5\% $, the null hypothesis $ H_0 $ is accepted, and the manufacturer's claim cannot be rejected using this data.\\
+		\end{align}
+		Since $ p > 5\% $, the null hypothesis $ H_0 $ is accepted, and the manufacturer's claim cannot be rejected using this data.
 	\end{subequations}
 
-	\item $ S = 3.1,\ \mu_0 = 24,\ \alpha = 0.05,\ n = 36$. Performing the z-test gives $ \overline{X} = 22.5 $,\\
+	\item $ S = 3.1,\ \mu_0 = 24,\ \alpha = 0.05,\ n = 36$. Performing the z-test gives $ \overline{X} = 22.5 $,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -192,11 +192,11 @@
 			T &= \frac{\sqrt{n}}{S}\ |\overline{X} - \mu_0| = 2.9 \nonumber \\
 			%
 			p &= P_{H_0}\left\{t \geq T\right\} = 0.63\% 
-		\end{align}\\
-		Since $ p < 5\% $, the null hypothesis $ H_0 $ is rejected and the mean is no longer equal to $ \mu_0 $.\\
+		\end{align}
+		Since $ p < 5\% $, the null hypothesis $ H_0 $ is rejected and the mean is no longer equal to $ \mu_0 $.
 	\end{subequations}
 
-	\item $ S = 0.3,\ \mu_0 = 0.8,\ \alpha = 0.05,\ n = 28$. Performing the z-test gives $ \overline{X} = 1 $,\\
+	\item $ S = 0.3,\ \mu_0 = 0.8,\ \alpha = 0.05,\ n = 28$. Performing the z-test gives $ \overline{X} = 1 $,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu = \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu \neq \mu_0 \nonumber \\
@@ -204,13 +204,13 @@
 			T &= \frac{\sqrt{n}}{S}\ |\overline{X} - \mu_0| = 3.53 \nonumber \\
 			%
 			p &= P_{H_0}\left\{t \geq T\right\} = 0.15\% 
-		\end{align}\\
+		\end{align}
 		Since $ p < 5\% $, the null hypothesis $ H_0 $ is rejected and the alcohol does affect the response time\\
 	\end{subequations}
 
 	\item Where data?\\
 	
-	\item $ S = 1.1,\ \mu_0 = 98.6,\ \alpha = (0.05, 0.01),\ n = 100$. Performing the z-test gives $ \overline{X} = 98.74 $,\\
+	\item $ S = 1.1,\ \mu_0 = 98.6,\ \alpha = (0.05, 0.01),\ n = 100$. Performing the z-test gives $ \overline{X} = 98.74 $,
 	\begin{subequations}
 		\begin{align}
 			H_0 : \mu \leq \mu_0 \qquad &\text{vs.} \qquad H_1 : \mu > \mu_0 \nonumber \\
@@ -218,7 +218,7 @@
 			T &= \frac{\sqrt{n}}{S}\ (\overline{X} - \mu_0) = 1.27 \nonumber \\
 			%
 			p &= P_{H_0}\left\{t \geq T\right\} = 10.3\% 
-		\end{align}\\
+		\end{align}
 		Since $ p > 5\%, 1\% $, the null hypothesis $ H_0 $ is not rejected the average temperature is not greater than $ \mu_0 $\\
 	\end{subequations}
 
