--- a/TeX_files/exercise02_new.tex
+++ b/TeX_files/exercise02_new.tex
@@ -27,9 +27,9 @@
 		\end{tikzpicture}
 	\end{figure}
 	
-	\item A pie chart uses the relative frequency of a data entry to allot the sector angle as a proportion of the full 360 degree circle. The sector angle would be $ \theta_i = 360 \times r_i $. \\
+	\item A pie chart uses the relative frequency of a data entry to allot the sector angle as a proportion of the full 360 degree circle. The sector angle would be $ \theta_i = 360 \times r_i $.
 	
-	\item Pie chart uses the relative frequencies of the 4 entries. \\
+	\item Pie chart uses the relative frequencies of the 4 entries.
 	\begin{table}[H]
 		\centering
 		\begin{tabular}{@{}lll@{}}
@@ -121,9 +121,9 @@
 		\end{tikzpicture}
 	\end{figure}
 	
-	No, this would not be sufficient as the distribution always tends to be approximately normal. \\
+	No, this would not be sufficient as the distribution always tends to be approximately normal.
 	
-	\item The number of days is the sum of all frequencies $ \sum f_i  = 33$. \\
+	\item The number of days is the sum of all frequencies $ \sum f_i  = 33$.
 	The sum of all travel times is the weighted sum of the travel times. $  \sum x_i f_i  = 767 $ \\
 	
 	\item \begin{enumerate}
@@ -158,7 +158,7 @@
 			
 		\end{figure}
 		
-		\item The frequency polygon is shown above. \\
+		\item The frequency polygon is shown above.
 		
 		\item Cumulative relative frequency plot is below \\
 		
@@ -177,7 +177,7 @@
 	\end{enumerate}
 	
 	\item \begin{enumerate}
-		\item The histogram of fatalities is below. \\
+		\item The histogram of fatalities is below.
 		\begin{figure}[H]
 			\centering
 			\begin{tikzpicture}
@@ -250,7 +250,7 @@
 		\end{subfigure} \\		
 	\end{figure}
 	
-	Benford's law would make the option c = 1.4512 the best guess. \\
+	Benford's law would make the option c = 1.4512 the best guess.
 	
 	\item Let the total employee payrolls be $ A_1 $ and $ A_2 $. Then, 
 	
@@ -263,16 +263,16 @@
 		\end{align}
 	
 	
-	No comment can be made about the comparison between medians. \\
+	No comment can be made about the comparison between medians.
 	
 	\item Let the first half dataset be $ \{x_i\} $ and the second half be $ \{y_i\} $, now : 
 	\begin{enumerate}
 		\item Mean of the first and second half is $\overline{x}$ and $ \overline{y} $, both with same number of elements $ n $. Mean of combined dataset is : 
 		\begin{align}
 			\overline{z} = \frac{\sum_{i} x_i + \sum_{i} y_i}{n + n} = \frac{\overline{x} + \overline{y}}{2} = 110
-		\end{align} \\
+		\end{align}
 		
-		\item Median of the combined dataset has to lie between the medians of the first and second halves. $ 100 \leq \text{Median}  \leq 120 $. This assumes that the dataset is sorted before being split into halves. \\
+		\item Median of the combined dataset has to lie between the medians of the first and second halves. $ 100 \leq \text{Median}  \leq 120 $. This assumes that the dataset is sorted before being split into halves.
 		
 		\item No comment can be made about the mode.
 	\end{enumerate}
@@ -301,9 +301,9 @@
 	
 	\begin{enumerate}
 		\item Mean for males = 40.904  and Mean for females = 40.98\\
-		\item Median is calculated by finding the class interval containing the middle term and then linearly interpolating within that interval. A similar process is used to find the quartiles. \\
+		\item Median is calculated by finding the class interval containing the middle term and then linearly interpolating within that interval. A similar process is used to find the quartiles.
 		
-		The quartiles for males are 8.3, 47 and 67.3. \\
+		The quartiles for males are 8.3, 47 and 67.3.
 		The quartiles for females are 8.5, 48.2 and 66.6.
 	\end{enumerate}
 	
@@ -322,12 +322,12 @@
 			(x_4)^2 + (x_5)^2 &= 22715
 		\end{align}
 		
-		This is a quadratic system of equations with the solution $ x_4 = 110.4 $ and $ x_5 = 102.6 $. \\
+		This is a quadratic system of equations with the solution $ x_4 = 110.4 $ and $ x_5 = 102.6 $.
 	
 	
 	\item No. The additional information needed is the population of all the states. This will be used to weight the mean salaries of the individual states to calculate the national average.
 	
-	\item Mean = 127.425, Std Dev = 11.87, Median = 127.5, Mode = 132.5 (using bin size 5). \\
+	\item Mean = 127.425, Std Dev = 11.87, Median = 127.5, Mode = 132.5 (using bin size 5).
 	The cumulative frequency graph is as follows : 
 	
 	
@@ -388,18 +388,18 @@
 		\end{align}
 	 \\
 	
-	Using the normal method, mean = 5.16 and variance = 6.96. \\
-	Using the recursive formula, mean = 5.16 and variance = 6.96. They match. \\
+	Using the normal method, mean = 5.16 and variance = 6.96.
+	Using the recursive formula, mean = 5.16 and variance = 6.96. They match.
 	
-	\item The 90 percentile for January averages is 46 degrees. \\
+	\item The 90 percentile for January averages is 46 degrees.
 	The 75 percentile for January averages is 70.45 degrees.
 	
-	\item The quartiles are 74, 85, 91.5.\\
+	\item The quartiles are 74, 85, 91.5.
 	
-	\item Mean = 84.92, variance = 928.63. \\
-	Quartiles are 60.25, 95.5, 113.25. \\
+	\item Mean = 84.92, variance = 928.63.
+	Quartiles are 60.25, 95.5, 113.25.
 	
-	\item ... larger than all of the existing values. \\
+	\item ... larger than all of the existing values.
 	
 	\item The box plot representing the data is as follows : \\
 	
@@ -425,7 +425,7 @@
 		\end{tikzpicture}
 	\end{figure}
 	
-	\item The data is shown as a histogram as follows. It is not a normal distribution. \\
+	\item The data is shown as a histogram as follows. It is not a normal distribution.
 	
 	\begin{figure}[H]
 		\centering
@@ -438,8 +438,8 @@
 	\end{figure} 
 	
 	
-	\item Mean = 0.35, Median = 0.35, Standard Deviation = 0.117, with the histogram looking approximately normal. \\
-	37 of 55 values (67 \%) are within 1 std of the mean. \\
+	\item Mean = 0.35, Median = 0.35, Standard Deviation = 0.117, with the histogram looking approximately normal.
+	37 of 55 values (67 \%) are within 1 std of the mean.
 	
 	\begin{figure}[H]
 		\centering
@@ -452,11 +452,11 @@
 	\end{figure} 
 	
 	\item \begin{enumerate}
-		\item Mean = 3.72, std dev = 0.146. \\
+		\item Mean = 3.72, std dev = 0.146.
 		
 		
-		\item 80\% of entries are within 1.5 std dev of the mean. Chebyshev inequality lower limit is 55.6 \%. \\
-		\item 100\% of entries are within 2 std dev of the mean. Chebyshev inequality lower limit is 75 \%. \\
+		\item 80\% of entries are within 1.5 std dev of the mean. Chebyshev inequality lower limit is 55.6 \%.
+		\item 100\% of entries are within 2 std dev of the mean. Chebyshev inequality lower limit is 75 \%.
 		\item Stem and leaf plot is replaced by histogram here.
 		
 		\begin{figure}[H]
@@ -472,7 +472,7 @@
 		
 	\end{enumerate}
 	
-	\item The approximate Chebyshev limits do not match the actual proportions. This is because the dataset is not normally distributed. \\
+	\item The approximate Chebyshev limits do not match the actual proportions. This is because the dataset is not normally distributed.
 	
 	The empirical value numbers are calculated using the area under the curve of a standard normal distribution in the interval [$ -k, k $] in order to find the fraction of data points in the interval [$ \mu - k \sigma, \mu + k \sigma $] \\
 	
@@ -482,9 +482,9 @@
 	\item No, because the health club consists of members of the total population who are above average weight. 
 	
 	\item \begin{enumerate}
-		\item Mean = 127.425, Median = 127.5. \\
+		\item Mean = 127.425, Median = 127.5.
 		
-		\item A histogram of the data to check if it is normal : yes it is. \\
+		\item A histogram of the data to check if it is normal : yes it is.
 		
 		\begin{figure}[H]
 			\centering
@@ -495,11 +495,11 @@
 			\end{tikzpicture}
 		\end{figure} 
 		
-		\item Standard Deviation = 11.87. \\
+		\item Standard Deviation = 11.87.
 		
-		\item The empirical rule dictates that the fraction of data points within 1.5 std dev of the mean is 86.6 \%, compared to observed value of 85 \%. \\
+		\item The empirical rule dictates that the fraction of data points within 1.5 std dev of the mean is 86.6 \%, compared to observed value of 85 \%.
 		
-		\item The Chebyshev minimum fraction is 55.6 \% of data within 1.5 std dev of the mean. This rule is obeyed. \\
+		\item The Chebyshev minimum fraction is 55.6 \% of data within 1.5 std dev of the mean. This rule is obeyed.
 	\end{enumerate}
 	
 	\item Sample correlation coefficient is r = 0.484 \\
@@ -514,11 +514,11 @@
 		\end{tikzpicture}
 	\end{figure}
 	
-	\item No causation can be declared from the correlation. It is possible that the good posture is a result of trying to relieve the back pain. \\
+	\item No causation can be declared from the correlation. It is possible that the good posture is a result of trying to relieve the back pain.
 	
-	\item No. A possible explanation is that immigrants tend to settle down in higher-paying states. \\
+	\item No. A possible explanation is that immigrants tend to settle down in higher-paying states.
 	
-	\item r = 0.743 between Hours studied and GPA. \\
+	\item r = 0.743 between Hours studied and GPA.
 	
 	\item 	Verifying property 3 of sample correlation coefficient : 
 	
@@ -552,9 +552,9 @@
 		\end{align}
 	\\
 	
-	\item Grades 2-4 imply children with a range of ages, so height is less likely to be directly causing the higher reading scores  compared to age itself. \\
+	\item Grades 2-4 imply children with a range of ages, so height is less likely to be directly causing the higher reading scores  compared to age itself.
 	
-	\item Family wealth, nurture and the emphasis it places on early literacy, school environments and peer group are all possible confounding factors that are extremely difficult to adjust for. \\
+	\item Family wealth, nurture and the emphasis it places on early literacy, school environments and peer group are all possible confounding factors that are extremely difficult to adjust for.
 	
 	\item The Lorenz curve is as follows, with Gini Index = 0.1567.
 	
@@ -570,7 +570,7 @@
 		\end{tikzpicture}
 	\end{figure} 
 	
-	\item The Lorenz curve is as follows, with Gini Index = 0.163. \\
+	\item The Lorenz curve is as follows, with Gini Index = 0.163.
 	
 	\begin{figure}[H]
 		\centering
@@ -584,8 +584,8 @@
 		\end{tikzpicture}
 	\end{figure} 
 	
-	\item From the formula for the Lorenz curve data points, multiplying all data by a constant has no effect as it cancels out. \\
-	Adding a positive constant to every data point, makes some Lorenz values larger and some smaller. So, the effect on the Gini index cannot be predicted. \\
+	\item From the formula for the Lorenz curve data points, multiplying all data by a constant has no effect as it cancels out.
+	Adding a positive constant to every data point, makes some Lorenz values larger and some smaller. So, the effect on the Gini index cannot be predicted.
 	
 \end{enumerate}
 
