--- a/TeX_files/exercise05.tex
+++ b/TeX_files/exercise05.tex
@@ -10,10 +10,10 @@
 			&= 1 - \left[\binom{4}{0} (0.6)^0 (0.4)^4 + \binom{4}{1} (0.6)^1 (0.4)^3\right] \nonumber \\
 			%
 			&= 0.8208 \nonumber
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Assume all 5 bits are independent.  At least 3 out of 5 bits have to be incorrectly received. Using Bernoulli RV with $ n = 5, p = 0.2 $, \\
+	\item Assume all 5 bits are independent.  At least 3 out of 5 bits have to be incorrectly received. Using Bernoulli RV with $ n = 5, p = 0.2 $,
 	
 	\begin{subequations}
 		\begin{align}
@@ -22,30 +22,30 @@
 			&= 1 - \sum\limits_{0}^{2} \binom{5}{i}\ (0.2)^i\ (0.8)^{5-i} \nonumber \\
 			%
 			&= 0.0579 \nonumber
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Assume all 10 voters are independent.  Exactly 7 out of 10 voters have to be agree. Using Bernoulli RV with $ n = 10, p = 0.7 $, \\
+	\item Assume all 10 voters are independent.  Exactly 7 out of 10 voters have to be agree. Using Bernoulli RV with $ n = 10, p = 0.7 $,
 	
 	\begin{subequations}
 		\begin{align}
 			P \left\{X = 7 \right\} &= \binom{10}{7}\ (0.7)^7\ (0.3)^{10-7}  \\
 			%
 			&= 0.2668 \nonumber
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 
-	\item Assume all 4 children are independent. Exactly 3 out of 4 children have to be dominant phenotype. Using Bernoulli RV with $ n = 4, p = 0.75 $, \\
+	\item Assume all 4 children are independent. Exactly 3 out of 4 children have to be dominant phenotype. Using Bernoulli RV with $ n = 4, p = 0.75 $,
 	
 	\begin{subequations}
 		\begin{align}
 			P \left\{X = 3 \right\} &= \binom{4}{3}\ (0.75)^3\ (0.25)^{4-3}  \\
 			%
 			&= 27/64 \nonumber
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 
-	\item All engines are independent. At least half the engines have to function. Using Bernoulli RV $ X, Y $ with $ n = 4, n = 2 $, \\
+	\item All engines are independent. At least half the engines have to function. Using Bernoulli RV $ X, Y $ with $ n = 4, n = 2 $,
 	
 	\begin{subequations}
 		\begin{align}
@@ -68,10 +68,10 @@
 			p\ (p-1)^2\ (3p-2) &> 0 \nonumber \\
 			%
 			p &> 2/3
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 	
-	\item Bernoulli RV $ X $ with $ \mathbb{E}[X] = 7, \mathrm{Var}(X) = 2.1 $, \\
+	\item Bernoulli RV $ X $ with $ \mathbb{E}[X] = 7, \mathrm{Var}(X) = 2.1 $,
 	
 	\begin{subequations}
 		\begin{enumerate}
@@ -91,7 +91,7 @@
 		\end{enumerate}
 	\end{subequations}
 
-	\item $ X, Y $ have parameters $ (n,p)$ and $ (n, 1-p) $. Let $ q = 1-p $. \\
+	\item $ X, Y $ have parameters $ (n,p)$ and $ (n, 1-p) $. Let $ q = 1-p $.
 	\begin{subequations}
 		\begin{enumerate}
 			\item \begin{align}
@@ -102,7 +102,7 @@
 				P \left\{Y \geq n-i \right\}&= \sum\limits_{k=n-i]}^{n} \binom{n}{k} \ (q)^k \ (1-q)^{n-k} \nonumber \\
 				%
 				&= \sum\limits_{k=i}^{0} \binom{n}{n-k} \ (1-q)^{n-k} \ (q)^{k} 
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{X  = k\right\} &= \binom{n}{k} \ p^k \ (1-p)^{n-k} \nonumber \\
@@ -123,7 +123,7 @@
 				&= \frac{n-k}{k+1}\ \binom{n}{k}\ \frac{p}{1-p} \ p^{k} \ (1-p)^{n-k} \nonumber \\
 				%
 				&= \frac{n-k}{k+1}\ \frac{p}{1-p}\ P \left\{X = k \right\}
-			\end{align}\\
+			\end{align}
 	
 			\item Condition for the next term to be larger than the current term \\
 			\begin{align}
@@ -132,32 +132,32 @@
 				np - kp &> k - kp + 1 - p \nonumber \\
 				%
 				k &< np + p - 1
-			\end{align}\\
+			\end{align}
 		
-			The first term to violate this is when $ k = (n+1)\ p $, which is when the next term will be smaller than the current term, and thus the maximum is reached.\\
+			The first term to violate this is when $ k = (n+1)\ p $, which is when the next term will be smaller than the current term, and thus the maximum is reached.
 			
 		\end{enumerate}
 	\end{subequations} 
 	
-	\item $ n $ independent experiments each with $ r $ possible outcomes.\\
+	\item $ n $ independent experiments each with $ r $ possible outcomes.
 	\begin{subequations}
 		\begin{enumerate}
 			\item $ N_1 $ is binomial with parameters $ n, p_1 $
 			\begin{align}
 				P \left\{N_1 = k\right\} &= \binom{n}{k}\ p_1^k\ (1-p_1)^{n-k}
-			\end{align}\\
+			\end{align}
 			
-			\item $ N_1 $ increasing causes $ N_2 $ to decrease. They are not independent. \\
+			\item $ N_1 $ increasing causes $ N_2 $ to decrease. They are not independent.
 			
-			\item $ N_1 + N_2 $ is the sum of two binomial RVs with the same $ n $ but different $ p $. Either event 1 or 2 needs to happen.\\
+			\item $ N_1 + N_2 $ is the sum of two binomial RVs with the same $ n $ but different $ p $. Either event 1 or 2 needs to happen.
 			\begin{align}
 				P \left\{N_1 + N_2 = k \right\} &= \binom{n}{k}\ (p_1 + p_2)^k\ (1-p_1 - p_2)^{n-k} 
-			\end{align}\\
+			\end{align}
 		
-			\item $ \sum N_i $ is the sum of $ k $ binomial RVs with the same $ n $ but different $ p $. One of the $ k $ events needs to happen.\\
+			\item $ \sum N_i $ is the sum of $ k $ binomial RVs with the same $ n $ but different $ p $. One of the $ k $ events needs to happen.
 			\begin{align}
 				P \left\{\sum N_i = m \right\} &= \binom{n}{m}\ \left(\sum p_i\right)^k\ \left(1-\sum p_i\right)^{n-k} 
-			\end{align}\\
+			\end{align}
 			
 		\end{enumerate}
 	\end{subequations} 
@@ -184,14 +184,14 @@
 				P \left\{X \geq 1\right\} &= 1 - P \left\{X = 0\right\} \nonumber \\
 				%
 				&= 1 - \left[e^{-0.5} \ \dfrac{0.5^0}{0!}\right] = 0.3935
-			\end{align}\\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{X = 1\right\} &= e^{-0.5} \ \dfrac{0.5^1}{1!} \nonumber \\
 				%
 				&= 0.3032
-			\end{align}\\
+			\end{align}
 		
 			\item 
 			\begin{align}
@@ -200,7 +200,7 @@
 				&= 1 - \left[e^{-0.5} \ \dfrac{0.5^0}{0!} + e^{-0.5} \ \dfrac{0.5^1}{1!}\right] \nonumber \\
 				%
 				&= 0.0902
-			\end{align}\\
+			\end{align}
 			
 		\end{enumerate}
 	\end{subequations} 
@@ -217,7 +217,7 @@
 			P \left\{C = 0\ |\ D^\complement \right\} &= \texttt{Poisson.pmf(0, 3)} = 0.0498 \nonumber \\
 			%
 			P \left\{D\ |\ C = 0 \right\} &= 0.8908
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 
 	\item Let the deaths be a Poisson RV with $ \lambda = 121.95 $.
@@ -228,14 +228,14 @@
 				P \left\{X \geq 130\right\} &= 1 - F(129) \nonumber \\
 				%
 				&= 1 - \texttt{Poisson.cdf(129, 121.5)} = 0.2318
-			\end{align}\\
+			\end{align}
 			
 			\item 
 			\begin{align}
 				P \left\{X \leq 100\right\} &= \texttt{F(100)} \nonumber \\
 				%
 				&= 0.0256
-			\end{align}\\
+			\end{align}
 			
 		\end{enumerate}
 	\end{subequations} 
@@ -248,14 +248,14 @@
 				P \left\{X \geq 1\right\} &= 1 - P\left\{X = 0\right\} \nonumber \\
 				%
 				&= 1 - (1-p^2)^n = 0.4514 \\
-			\end{align}\\
+			\end{align}
 			
 			\item Since the binomial exact expression is difficult to compute, switch to Poisson approximation with $ \lambda = p $\\
 			\begin{align}
 				P \left\{Y \geq 1\right\} &= 1 - (e^{-p})^n \nonumber \\
 				%
 				&= 1 \qquad \text{within computation errors}
-			\end{align}\\
+			\end{align}
 			
 		\end{enumerate}
 	\end{subequations} 
@@ -266,10 +266,10 @@
 			P \left\{X = 0 \right\} &= 1 - [1 - \texttt{Poisson.pmf(0, 52/13)}] \nonumber \\
 			%
 			&= e^{-4} = 0.01831
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 
-	\item Each bit is independent. Error has $ p = 10^{-3} $, total number of bits $ n = 10^3 $. Poisson approximation will be very close. \\
+	\item Each bit is independent. Error has $ p = 10^{-3} $, total number of bits $ n = 10^3 $. Poisson approximation will be very close.
 	\begin{subequations}
 		\begin{align}
 			P \left\{X > 3 \right\} &= 1 - P \left\{X \leq 3 \right\} \nonumber \\
@@ -283,10 +283,10 @@
 			P \left\{X > 3 \right\} &= 	1 - e^{-1}\left[1 + 1 + 1/2 + 1/6 \right] \nonumber \\
 			%
 			&= 0.18988
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 
-	\item Relating the $ (k+1)^{th} $ term in the Poisson PMF to the $ k^{th} $ term. \\
+	\item Relating the $ (k+1)^{th} $ term in the Poisson PMF to the $ k^{th} $ term.
 	\begin{subequations}
 		\begin{align}
 			P \left\{X = k+1 \right\} &= e^{-\lambda}\ \frac{\lambda^{k+1}}{(k+1)!} \nonumber \\
@@ -298,7 +298,7 @@
 			P \left\{X = k+1 \right\} &> P \left\{X = k \right\} \nonumber \\
 			%
 			&\to (k+1) < \lambda
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 	For $ k = \lambda + 1 $, the increasing trend reverses, and thus the maximum is reached at \\ $ k_{max} = \lfloor \lambda \rfloor $\\
 	
@@ -308,10 +308,10 @@
 			P \left\{X \leq 1 \right\} &= \sum\limits_{i = 0}^{1} \frac{\binom{N}{i}\ \binom{M}{n-i}}{\binom{N+M}{n}}\nonumber \\
 			%
 			&= 0.3630
-		\end{align}\\
+		\end{align}
 	\end{subequations} 
 	
-	\item Deriving a recursion expression,\\
+	\item Deriving a recursion expression,
 	\begin{subequations}
 		\begin{enumerate}
 			\item \begin{align}
@@ -320,9 +320,9 @@
 				&= \frac{\binom{N}{i-1}\ \binom{M}{k+1-i}}{\binom{N+M}{k}}\ \frac{N-i+1}{i}\ \frac{k-i+1}{M-k+i} \nonumber \\
 				%
 				&= P \left\{X = i-1\right\}\ \frac{N-i+1}{i}\ \frac{k-i+1}{M-k+i}  \\
-			\end{align}\\
+			\end{align}
 			
-			\item $ N = M = 10, k = 5 $. Now, $ P \left\{X = 0 \right\} $ is computed manually as $ 21/1292 $. The results of the recursion are tabulated here. \\
+			\item $ N = M = 10, k = 5 $. Now, $ P \left\{X = 0 \right\} $ is computed manually as $ 21/1292 $. The results of the recursion are tabulated here.
 			\begin{table}[H]
 				\centering				
 				\begin{tabular}{@{}rr@{}}
@@ -339,19 +339,19 @@
 				\end{tabular}
 			\end{table}
 		
-			\item Using a similar recursion and finding the CDF by summing the relevant terms,\\ $ P\left\{X \leq 10\right\} = 0.9642$\\
+			\item Using a similar recursion and finding the CDF by summing the relevant terms, $ P\left\{X \leq 10\right\} = 0.9642$\\
 			
 		\end{enumerate}
 	\end{subequations} 
 
-	\item For a geometric random variable $ X $,\\
+	\item For a geometric random variable $ X $,
 	\begin{subequations}
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{X = k\right\} &= (1-p)^{k-1}\ p 
-			\end{align}\\
+			\end{align}
 			
-			\item This is an arithmetico-geometric progression with $ a = 1, b = 1, d = 1, r = (1-p) $. The infinite series sum is found using recursion.\\
+			\item This is an arithmetico-geometric progression with $ a = 1, b = 1, d = 1, r = (1-p) $. The infinite series sum is found using recursion.
 			
 			\begin{align}
 				S_n &= ab + (a+d)\ br + (a+2d)\ br^2 + \dots \nonumber \\
@@ -363,9 +363,9 @@
 				S_n\ (1-r) &= ab + \frac{dbr}{1-r} \nonumber \\
 				%
 				S_n &= \frac{ab}{1-r} + \frac{dbr}{(1-r)^2}
-			\end{align}\\
+			\end{align}
 		
-			Applying the above result to the expected value calculation, \\
+			Applying the above result to the expected value calculation,
 			
 			\begin{align}
 				\mathbb{E}[X] &= \sum\limits_{k = 1}^{\infty} k \ (1-p)^{k-1}\ p \nonumber \\
@@ -373,15 +373,15 @@
 				&= p\ \left[1 + 2(1-p) + 3(1-p)^2 + 4(1-p)^3 + \dots\right]		\nonumber \\
 				%
 				&= p \left[\frac{1}{p} + \frac{1-p}{p^2}\right]	= \frac{1}{p} \\
-			\end{align}\\
+			\end{align}
 				
-			\item $ Y $ is a negative binomial RV. Only $ r-1 $ out of the first $ k-1 $ trials can be success. \\
+			\item $ Y $ is a negative binomial RV. Only $ r-1 $ out of the first $ k-1 $ trials can be success.
 			\begin{align}
 				P \left\{Y = k\right\} &= \binom{k-1}{r-1}\ p^{r-1}\ (1-p)^{k-r}\ p \\
 				%
 			\end{align}
 		
-			\item Consider $ Y = \sum Y_i $ where the $ Y_i $ are the inter-success intervals. Each of the $ Y_i $ is a geometric RV. Thus,\\
+			\item Consider $ Y = \sum Y_i $ where the $ Y_i $ are the inter-success intervals. Each of the $ Y_i $ is a geometric RV. Thus,
 			\begin{align}
 				\mathbb{E}[Y] &= \mathbb{E}\left[\sum\limits_{i = 1}^{r} Y_i\right] \nonumber \\
 				%
@@ -392,7 +392,7 @@
 	\end{subequations}
 	
 	
-	\item Transforming a uniform RV using its CDF, gives\\
+	\item Transforming a uniform RV using its CDF, gives
 	\begin{subequations}
 		\begin{align}
 			P \left\{U \leq k \right\} &= F_U(k) = k \nonumber \\
@@ -400,15 +400,15 @@
 			P \left\{a + (b-a)U \leq a + (b-a)k \right\} &= F_V (a + (b-a)k) = k \nonumber \\
 			%
 			F_V(k) &= \frac{k-a}{b-a}
-		\end{align}\\
+		\end{align}
 	
 	This shows that V is a uniform RV on the interval $ [a, b] $\\
 	\end{subequations} 
 
-	\item Wait longer than 10 minutes has $ p = 2/3 $. \\
-	If Bus has not yet arrived by $ 10:15 $, there is a $ p = 1/3 $ chance that the wait is longer than 10 minutes. \\
+	\item Wait longer than 10 minutes has $ p = 2/3 $.
+	If Bus has not yet arrived by $ 10:15 $, there is a $ p = 1/3 $ chance that the wait is longer than 10 minutes.
 	
-	\item Independent normal RV with $ \mu = 10 $ and same variance $ \sigma^2 $,\\
+	\item Independent normal RV with $ \mu = 10 $ and same variance $ \sigma^2 $,
 	$ X_1 + X_2 $ is also normal RV with mean = 20 and variance = $ 2 \sigma^2 $
 	\begin{subequations}
 		\begin{enumerate}
@@ -417,7 +417,7 @@
 				P \left\{X_1 > 15\right\} &= 1 - P \left\{X_1 \leq 15\right\} = 1 - \Phi\left(\frac{15 - 10}{\sigma}\right) \nonumber \\
 				%
 				P \left\{X_1 + X_2 > 25\right\} &= 1 - P \left\{X_1 + X_2 \leq 25\right\} = 1 - \Phi\left(\frac{25  -  20}{\sqrt{2}\ \sigma}\right) 
-			\end{align}\\
+			\end{align}
 			
 			
 			\item First quantity is larger.
@@ -425,31 +425,31 @@
 				P \left\{X_1 > 15\right\} &= 1 - P \left\{X_1 \leq 15\right\} = 1 - \Phi\left(\frac{15 - 10}{\sigma}\right) \nonumber \\
 				%
 				P \left\{X_1 + X_2 > 30\right\} &= 1 - P \left\{X_1 + X_2 \leq 30\right\} = 1 - \Phi\left(\frac{30  -  20}{\sqrt{2}\ \sigma}\right) 
-			\end{align}\\
+			\end{align}
 			
 			
-			\item Equating the two CDFs, \\
+			\item Equating the two CDFs,
 			\begin{align}
 				P \left\{X_1 > 15\right\} &= 1 - P \left\{X_1 \leq 15\right\} = 1 - \Phi\left(\frac{15 - 10}{\sigma}\right) \nonumber \\
 				%
 				P \left\{X_1 + X_2 > x\right\} &= 1 - P \left\{X_1 + X_2 \leq x\right\} = 1 - \Phi\left(\frac{x  -  20}{\sqrt{2}\ \sigma}\right) \nonumber \\
 				%
 				x &= 5\sqrt{2} + 20
-			\end{align}\\	
+			\end{align}	
 		\end{enumerate}
 	\end{subequations}
 
-	\item Independent normal RV with $ \mu = 500 $ and same variance $ \sigma = 100 $,\\
+	\item Independent normal RV with $ \mu = 500 $ and same variance $ \sigma = 100 $,
 	\begin{subequations}
 		\begin{enumerate}
-			\item all 5 students score less than 600.\\
+			\item all 5 students score less than 600.
 			\begin{align}
 				P \left\{X_1 < 600\right\} &= \Phi\left(\frac{600 - 500}{100}\right) \nonumber \\
 				%
 				&= 0.84 \nonumber \\
 				%
 				P\left\{\text{required}\right\} &= (0.84)^5 = 0.4216
-			\end{align}\\
+			\end{align}
 			
 			
 			\item Exactly 3 out of 5 score above 640.
@@ -461,14 +461,14 @@
 				P\left\{\text{required}\right\} &= \binom{5}{3}\ (0.0807)^3\ (1- 0.0807)^2 \nonumber \\
 				%
 				&= 0.0045
-			\end{align}\\
+			\end{align}
 	
 		\end{enumerate}
 	\end{subequations}
 
-	\item Independent normal RV with $ \mu = 40 $ and same variance $ \sigma = 4 $,\\
+	\item Independent normal RV with $ \mu = 40 $ and same variance $ \sigma = 4 $,
 	\begin{subequations}
-			2 of the next 4 years have rainfall more than 50.\\
+			2 of the next 4 years have rainfall more than 50.
 			\begin{align}
 				P \left\{X_1 > 50\right\} &= 1 - \Phi\left(\frac{50 - 40}{4}\right) \nonumber \\
 				%
@@ -477,10 +477,10 @@
 				P\left\{\text{required}\right\} &= \binom{4}{2}\ (0.0062)^2\ (1- 0.0062)^2 \nonumber \\
 				%
 				&= 0.00023
-			\end{align}\\
+			\end{align}
 	\end{subequations}
 
-	\item Independent normal RV with $ \mu = 1000 $ and same standard deviation $ \sigma = 200 $,\\
+	\item Independent normal RV with $ \mu = 1000 $ and same standard deviation $ \sigma = 200 $,
 	$ X_1 + X_2 $ is also normal RV with mean = 2000 and standard deviation $ \sigma = 200\ \sqrt{2} $
 	\begin{subequations}
 		\begin{enumerate}
@@ -490,29 +490,29 @@
 				&= 0.6915 \\
 				%
 				P\left\{\text{required}\right\} &= (0.6915)^2 = 0.4781
-			\end{align}\\
+			\end{align}
 			
 			
 			\item \begin{align}
 				P \left\{X_1 + X_2 > 2200\right\} &= 1 - P \left\{X_1 + X_2 \leq 2200\right\} \nonumber \\
 				%
 				& = 1 - \Phi\left(\frac{2200 - 2000}{200\ \sqrt{2}}\right) = 0.2397
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	\end{subequations}
 
 	\item \begin{subequations}
-	First case is $ P \left\{X > 10\right\} $ with $ \mu < 10 $. The argument of $ \Phi $ has a positive numerator. Thus, as $ \sigma $ increases, the argument decreases and the LHS increases.\\
+	First case is $ P \left\{X > 10\right\} $ with $ \mu < 10 $. The argument of $ \Phi $ has a positive numerator. Thus, as $ \sigma $ increases, the argument decreases and the LHS increases.
 	
 		\begin{align}
 			P \left\{X > 10\right\} &= 1 - \Phi\left(\frac{10 - \mu}{\sigma}\right)\nonumber \\
-		\end{align}\\
+		\end{align}
 	
-	Second case is $ P \left\{X > 10\right\} $ with $ \mu > 10 $. The argument of $ \Phi $ has a positive numerator after rearranging. Thus, as $ \sigma $ increases, the argument decreases and the LHS also decreases.\\
+	Second case is $ P \left\{X > 10\right\} $ with $ \mu > 10 $. The argument of $ \Phi $ has a positive numerator after rearranging. Thus, as $ \sigma $ increases, the argument decreases and the LHS also decreases.
 	
 	\begin{align}
 		P \left\{X > 10\right\} &= 1 - \Phi\left(\frac{10 - \mu}{\sigma}\right)\nonumber = \Phi\left(\frac{\mu - 10}{\sigma}\right)\nonumber \\
-	\end{align}\\
+	\end{align}
 	\end{subequations}
 
 	\item 
@@ -523,7 +523,7 @@
 			P \left\{X > 1.21\right\} &= 1 - \Phi\left(\frac{1.21 - 1.20}{0.005}\right) = 0.0227 \nonumber \\
 			%
 			P \left\{X > 1.21\right\} &= P \left\{X < 1.19\right\}
-		\end{align}\\
+		\end{align}
 
 	\end{subequations}
 
@@ -540,7 +540,7 @@
 				1 &= \frac{1}{\sqrt{2\pi}}\ \int\limits_{-\infty}^{\infty} \exp\left(\frac{-y^2}{2}\right) \ \mathrm{d}y \nonumber \\
 				%
 				\sqrt{2\pi} &= I
-			\end{align}\\
+			\end{align}
 	
 			\item \begin{align}
 				I^2 &= \int\limits_{-\infty}^{\infty} \exp(-x^2/2) \ \mathrm{d}x \int\limits_{-\infty}^{\infty} \exp(-y^2/2) \ \mathrm{d}y \nonumber \\
@@ -560,7 +560,7 @@
 	
 	\item 
 	\begin{subequations}
-		$ \mu = \mathbb{E}[\log X]$ and $\sigma = \mathrm{Var}(\log X)$. $ \log X $ is a normal RV.\\
+		$ \mu = \mathbb{E}[\log X]$ and $\sigma = \mathrm{Var}(\log X)$. $ \log X $ is a normal RV.
 		\begin{align}
 			P \left\{\log X \leq x\right\} &= \Phi\left(\frac{x - \mu}{\sigma}\right) \nonumber \\
 			%
@@ -569,7 +569,7 @@
 			\text{substitute}\ y &= e^x \\
 			%
 			P \left\{X \leq y\right\} &= \Phi\left(\frac{\log y - \mu}{\sigma}\right)
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
 	\item Using the z-score and corresponding $ \alpha $ values,
@@ -585,12 +585,12 @@
 			%
 			\mu &= 250000 \qquad \sigma = 103782 \nonumber \\
 			%  
-		\end{align}\\
+		\end{align}
 	
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{\log X \leq 250000\right\} &= \Phi(0) = 0.5
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{\log 260000 \leq X \leq 300000\right\} &= \Phi(50000 / \sigma) - \Phi(10000/ \sigma) \nonumber \\
@@ -600,16 +600,16 @@
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let normal RVs $ X, Y $ be the economics and statistics scores respectively. The percentile scores are higher for $ Y $.\\
+	\item Let normal RVs $ X, Y $ be the economics and statistics scores respectively. The percentile scores are higher for $ Y $.
 	\begin{subequations}		
 		\begin{align}
 			p_X &= \Phi \left(\frac{70-60}{20}\right) = 69.15\% \nonumber \\
 			%
 			p_Y &= \Phi \left(\frac{62-55}{10}\right) = 75.8\% \nonumber \\
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Let $ X $ be the gain as a normal RV with $ \mu = 10, \sigma = 7 $.\\
+	\item Let $ X $ be the gain as a normal RV with $ \mu = 10, \sigma = 7 $.
 	\begin{subequations}		
 		\begin{enumerate}
 			\item \begin{align}
@@ -618,7 +618,7 @@
 				\left(\frac{v + 10}{7}\right) &= \texttt{norm.ppf(0.99)} = 2.3263 \nonumber \\
 				%
 				v &= 6.28
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				\mathrm{VAR} &= \sigma \times 2.33263 - \mu \nonumber \\
@@ -630,73 +630,73 @@
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let $ X $ be a normal RV with $ \mu = 40.14, \sigma = 8.7 $.\\
+	\item Let $ X $ be a normal RV with $ \mu = 40.14, \sigma = 8.7 $.
 	\begin{subequations}		
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{X > 42\right\} &= 1 - \Phi \left(\frac{42 - 40.14}{8.7}\right) \nonumber \\
 				%
 				 &= 0.4153
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{X_1 + X_2 > 84\right\} &= 1 - \Phi \left(\frac{84 - 2 \times 40.14}{\sqrt{2} \times 8.7}\right) \nonumber \\
 				%
 				&= 0.3812
-			\end{align}\\
+			\end{align}
 		
 			\item \begin{align}
 				P \left\{X_1 + X_2 +X_3 > 126\right\} &= 1 - \Phi \left(\frac{126 - 3 \times 40.14}{\sqrt{3} \times 8.7}\right) \nonumber \\
 				%
 				&= 0.3555
-			\end{align}\\
+			\end{align}
 		
 			\item The rainfall in each year is an independent normal RV.
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let $ X $ be a normal RV with $ \mu = 64.5, \sigma = 2.4 $.\\
+	\item Let $ X $ be a normal RV with $ \mu = 64.5, \sigma = 2.4 $.
 	\begin{subequations}		
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{X < 63\right\} &= \Phi \left(\frac{63 - 64.5}{2.4}\right) \nonumber \\
 				%
 				&= 0.266
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{X < 70\right\} &= \Phi \left(\frac{70 - 64.5}{2.4}\right) \nonumber \\
 				%
 				&= 0.9890
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{63 < X < 70\right\} &= \Phi \left(\frac{70 - 64.5}{2.4}\right) - \Phi \left(\frac{63 - 64.5}{2.4}\right) \nonumber \\
 				%
 				&= 0.7230
-			\end{align}\\
+			\end{align}
 		
 			\item \begin{align}
 				P \left\{ < 72\right\} &= \Phi \left(\frac{72 - 64.5}{2.4}\right) \nonumber \\
 				%
 				&= 99.91\%
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{X_1 + X_2 > 2 \times 66\right\} &= 1 - \Phi \left(\frac{2 \times 66 - 2 \times 64.5}{\sqrt{2} \times 2.4}\right) \nonumber \\
 				%
 				&= 0.1884
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{\left(\sum_{1}^{4} X_i\right) > 4 \times 66\right\} &= 1 - \Phi \left(\frac{4 \times 66 - 4 \times 64.5}{\sqrt{4} \times 2.4}\right) \nonumber \\
 				%
 				&= 0.1056
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let $ X $ be a normal RV with $ \mu = 100 $ and $ \sigma = 14.2 $.\\
+	\item Let $ X $ be a normal RV with $ \mu = 100 $ and $ \sigma = 14.2 $.
 	\begin{subequations}		
 		\begin{align}
 			\Phi\left(\frac{x - \mu}{\sigma}\right) &= 0.99 \nonumber \\
@@ -704,44 +704,44 @@
 			\left(\frac{x - \mu}{\sigma}\right) &= z_{0.01} = 2.5758 \nonumber \\
 			%
 			x &= 136.57 \qquad \text{top scores are in the range} \ [136.57, \infty)
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Let $ X $ be an exponential RV with $ \lambda = 1 $.\\
+	\item Let $ X $ be an exponential RV with $ \lambda = 1 $.
 	\begin{subequations}		
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{X > 2\right\} &= 1 - P \left\{X \leq 2\right\} \nonumber \\
 				%
 				&= 1 - (1 - e^{-2}) = 0.1353
-			\end{align}\\
+			\end{align}
 			
 			\item Using the memoryless property,
 			\begin{align}
 				P \left\{X > 3\ |\ X > 2\right\} &= P \left\{X > 1 \right\} \nonumber \\
 				%
 				&= 1 - (1 - e^{-1}) = 0.3678
-			\end{align}\\
+			\end{align}
 
 		\end{enumerate}
 	\end{subequations}
 	
-	\item Let $ X $ be an exponential RV with $ \lambda = 1/8 $.\\
+	\item Let $ X $ be an exponential RV with $ \lambda = 1/8 $.
 	\begin{subequations}		
 		\begin{align}
 			P \left\{X > 10\right\} &= 1 - P \left\{X \leq 10 \right\} \nonumber \\
 			%
 			&= 1 - (1 - e^{-10/8}) = 0.2865
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Let $ X $ be an exponential RV with $ \lambda = 1/20 $.\\
+	\item Let $ X $ be an exponential RV with $ \lambda = 1/20 $.
 	\begin{subequations}		
 		\begin{align}
 			P \left\{X > 20\right\} &= 1 - P \left\{X \leq 20 \right\} \nonumber \\
 			%
 			&= 1 - (1 - e^{-20/20}) = 0.3679
-		\end{align}\\
+		\end{align}
 	
 		However, if the RV is uniform over $ [0, 40] $\\
 		
@@ -749,7 +749,7 @@
 			P \left\{X > 30\ |\ X > 10\right\} &= \frac{P \left\{X > 30 \ \cap\  X > 10\right\}}{P \left\{X > 10\right\}} \nonumber \\
 			%
 			&= \frac{1/4}{3/4} = \frac{1}{3}
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
 	\item 
@@ -758,19 +758,19 @@
 			\item $ S_n $ is the time taken for $ n $ events to occur
 			\begin{align}
 				S_n &= \sum\limits_{i=1}^{n} X_i
-			\end{align}\\
+			\end{align}
 			
-			\item $ S_n \leq t $ means that at least $ n $ events occur before time $ t $. \\
-			$ N(t) \geq n $ means that at least $ n $ events occur before time $ t $. Thus they are equivalent.\\
+			\item $ S_n \leq t $ means that at least $ n $ events occur before time $ t $.
+			$ N(t) \geq n $ means that at least $ n $ events occur before time $ t $. Thus they are equivalent.
 			
 			\item 
 			\begin{align}
 				\left\{S_n \leq t\right\} &= 1 - P \left\{N(t) \leq n-1\right\} \nonumber \\
 				%
 				&= 1 - \sum\limits_{k=0}^{n-1} e^{-\lambda t}\ \dfrac{(\lambda t)^k}{k!}
-			\end{align}\\
+			\end{align}
 		
-			\item Using the CDF to obtain the PDF,\\
+			\item Using the CDF to obtain the PDF,
 			\begin{align}
 				F(t) &=  1 - \sum\limits_{k=0}^{n-1} e^{-\lambda t}\ \dfrac{(\lambda t)^k}{k!} \nonumber \\
 				%
@@ -783,8 +783,8 @@
 				&- \lambda\ e^{-\lambda t}\ \left[1 + \lambda t + \dfrac{(\lambda t)^2}{2!} + \dfrac{(\lambda t)^3}{3!} + \dots\right] \\
 				%
 				&= \lambda e^{-\lambda t}\ \dfrac{(\lambda t)^{n-1}}{\Gamma (n)}
-			\end{align}\\
-			This is clearly a Gamma distribution with parameters $ n, \lambda $.\\
+			\end{align}
+			This is clearly a Gamma distribution with parameters $ n, \lambda $.
 		\end{enumerate}
 	\end{subequations}
 
@@ -796,14 +796,14 @@
 				P \left\{N(t = 0.5) \geq 2\right\} &= 1 - \sum\limits_{k=0}^{1} e^{-\lambda t}\ \dfrac{(\lambda t)^k}{k!} \nonumber \\
 				%
 				&= 1 - e^{-2.5} \left[1 + 2.5\right]= 0.7127
-			\end{align}\\
+			\end{align}
 		
 			\item
 			\begin{align}
 				P \left\{N(t = 0.75) = 0\right\} &= e^{-\lambda t}\ \dfrac{(\lambda t)^0}{0!} \nonumber \\
 				%
 				&= e^{-3.75} \left[1\right]= 0.0235
-			\end{align}\\
+			\end{align}
 		
 			\item
 			\begin{align}
@@ -822,17 +822,17 @@
 				&+ \left[1\right] \left[1 - e^{-2.5}\left(1 + 2.5 + \frac{2.5^2}{2} + \frac{2.5^3}{6}\right)\right] \\
 				%
 				&= 0.4861
-			\end{align}\\
+			\end{align}
 
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let $ X, Y $ be horizontal and vertical errors, both independent normal RV with  $ \mu = 0 $ and $ \sigma = 2 $. Now, $ D^2 = X^2 + Y^2 $, and  $D^2 / 4 \sim \chi_2^2 $.\\
+	\item Let $ X, Y $ be horizontal and vertical errors, both independent normal RV with  $ \mu = 0 $ and $ \sigma = 2 $. Now, $ D^2 = X^2 + Y^2 $, and  $D^2 / 4 \sim \chi_2^2 $.
 	\begin{subequations}		
 		\begin{align}
 			\mathbb{E}[D^2 / 4] &= n = 2 \nonumber
-		\end{align}\\
-		The distance $ D/2 $ is a chi-distribution with expected value given by \\
+		\end{align}
+		The distance $ D/2 $ is a chi-distribution with expected value given by
 		
 		\begin{align}
 			\mathbb{E}[D/2] &= \sqrt{2} \ \frac{\Gamma\left(\frac{n+1}{2}\right)}{\Gamma(n/2)} = \frac{\sqrt{2 \pi}}{2} \nonumber \\
@@ -847,24 +847,24 @@
 			\item
 			\begin{align}
 				P \left\{X \leq 6\right\} &= 0.5768
-			\end{align}\\
+			\end{align}
 			
 			\item
 			\begin{align}
 				P \left\{3 \leq X \leq 9\right\} &= 0.6353
-			\end{align}\\
+			\end{align}
 			
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let $ X + Y $ is a chi-squared distribution with 9 DOF.\\
+	\item Let $ X + Y $ is a chi-squared distribution with 9 DOF.
 	\begin{subequations}		
 		\begin{align}
 			P \left\{X + Y > 10\right\} &= 1 - P \left\{X + Y \leq 10\right\} = 0.3505
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Let $ X + Y $ is a chi-squared distribution with 9 DOF. Using the result from problem 29,\\
+	\item Let $ X + Y $ is a chi-squared distribution with 9 DOF. Using the result from problem 29,
 	\begin{subequations}		
 		\begin{align}
 			\Gamma(1/2) &= \int\limits_{0}^{\infty} e^{-y}\ y^{-1/2}\ \mathrm{d}y \\
@@ -874,45 +874,45 @@
 			\Gamma(1/2) &= \int\limits_{0}^{\infty} e^{-x^2/2}\ \frac{\sqrt{2}}{x}\ x\ \mathrm{d}x \nonumber \\
 			%
 			&= \frac{\sqrt{2}}{2} \int\limits_{-\infty}^{\infty} e^{-x^2/2}\ \mathrm{d}x = \sqrt{\pi}
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item t distribution with 8 DOF.\\
+	\item t distribution with 8 DOF.
 	\begin{subequations}		
 		\begin{enumerate}
 			\item \begin{align}
 				P \left\{ T \geq 1 \right\} &= 0.1733
-			\end{align}\\
+			\end{align}
 			
 			\item \begin{align}
 				P \left\{ T \leq 2 \right\} &= 0.9597
-			\end{align}\\
+			\end{align}
 		
 			\item \begin{align}
 				P \left\{-1 \leq T \leq 1 \right\} &= 0.6534
-			\end{align}\\
+			\end{align}
 			
 		\end{enumerate}
 	\end{subequations}
 	
-	\item Let $ X + Y $ is a chi-squared distribution with 9 DOF. Using the result from problem 29,\\
+	\item Let $ X + Y $ is a chi-squared distribution with 9 DOF. Using the result from problem 29,
 	\begin{subequations}		
 		\begin{align}
 			T^2_n &= \frac{Z^2}{\chi_n^{2} / n} = \frac{\chi_1^{2} / 1}{\chi_n^{2} / n} = F_{1, n}
-		\end{align}\\
+		\end{align}
 	\end{subequations}
 
-	\item Let $ Y $ be a normal RV with mean $ \mu $ and variance $ \sigma^2 $.\\
+	\item Let $ Y $ be a normal RV with mean $ \mu $ and variance $ \sigma^2 $.
 	\begin{subequations}		
 		\begin{align}
 			P\left\{X \leq x\right\} &= \Phi\left(\frac{x-a}{b}\right) \nonumber \\
 			%
 			P\left\{Y \leq y\right\} &= \Phi\left(\frac{y-\mu}{\sigma}\right) 
-		\end{align}\\
-	Thus, $ X $ is a normal RV with mean $ a $ and variance $ b^2 $.\\
+		\end{align}
+	Thus, $ X $ is a normal RV with mean $ a $ and variance $ b^2 $.
 	\end{subequations}
 
-	\item Let $ Y $ be a Pareto RV with minimum $ \alpha $ and index $ \lambda $.\\
+	\item Let $ Y $ be a Pareto RV with minimum $ \alpha $ and index $ \lambda $.
 	\begin{subequations}		
 		\begin{enumerate}
 			\item To find the expectation value	\\
@@ -928,7 +928,7 @@
 				\mathbb{E}[Y] &= \frac{\alpha \ \lambda}{\lambda - 1} \qquad \text{if } \ \lambda > 1 \\
 				%
 				\mathbb{E}[Y] &= \infty \qquad \text{as the integral is not finite for }\ \lambda \leq 1 \\
-			\end{align}\\
+			\end{align}
 		
 			\item to find the variance, when $ \lambda > 2 $\\		
 			\begin{align}
@@ -943,11 +943,11 @@
 				\mathrm{Var}[Y] &= \frac{\alpha^2 \ \lambda}{\lambda - 2} - \left(\frac{\alpha \ \lambda}{\lambda - 1}\right)^2 \\
 				%
 				&= \alpha^2\ \frac{\lambda}{(\lambda - 2)(\lambda - 1)(\lambda - 1)}
-			\end{align}\\
+			\end{align}
 		\end{enumerate}
 	\end{subequations}
 
-	\item Let $ Y = \alpha\ \exp(X) $ , with $ X $ being an exponential RV with rate$ \lambda $. \\
+	\item Let $ Y = \alpha\ \exp(X) $ , with $ X $ being an exponential RV with rate$ \lambda $.
 	\begin{subequations}		
 		\begin{align}
 			Y &> y_0 > \alpha \nonumber \\
@@ -957,8 +957,8 @@
 			P\left\{X > x +  \log(y_0/\alpha)\ |\ X > \log(y_0/\alpha)\right\} &= P \left\{X > x\right\} \\
 			%
 			P(Y\ |Y > y_0) &= \texttt{Pareto($ y_0 $, $ \lambda $)}
-		\end{align}\\
-		Thus, $ X $ is a normal RV with mean $ a $ and variance $ b^2 $.\\
+		\end{align}
+		Thus, $ X $ is a normal RV with mean $ a $ and variance $ b^2 $.
 		
 		
 	\end{subequations}
