--- a/TeX_files/exercise09_new.tex
+++ b/TeX_files/exercise09_new.tex
@@ -2,7 +2,7 @@
 
 \begin{enumerate}
 	
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
 
 \begin{figure}[H]
 	\begin{subfigure}[l]{0.2\linewidth}
@@ -30,8 +30,8 @@
 	\end{subfigure}
 \end{figure}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-The value corresponding to $ x = 25 $ is $ y = 147.34 $.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+The value corresponding to $ x = 25 $ is $ y = 147.34 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -61,8 +61,8 @@ The value corresponding to $ x = 25 $ is $ y = 147.34 $.\\
 	\end{subfigure}
 \end{figure}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-The value corresponding to $ x = 3.2 $ is $ y = 0.04476 $.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+The value corresponding to $ x = 3.2 $ is $ y = 0.04476 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -92,8 +92,8 @@ The value corresponding to $ x = 3.2 $ is $ y = 0.04476 $.\\
 	\end{subfigure}
 \end{figure}
 	
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-The value corresponding to $ x = 0.43 $ is $ y = 2439.75 $.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+The value corresponding to $ x = 0.43 $ is $ y = 2439.75 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -124,9 +124,9 @@ The value corresponding to $ x = 0.43 $ is $ y = 2439.75 $.\\
 \end{figure}
 
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-The least squares estimators are $ A = 2.64 $ and $ B = 11.79 $.\\
-The value corresponding to $ x = 7 $ is $ y = 85.22 $.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+The least squares estimators are $ A = 2.64 $ and $ B = 11.79 $.
+The value corresponding to $ x = 7 $ is $ y = 85.22 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -157,8 +157,8 @@ The value corresponding to $ x = 7 $ is $ y = 85.22 $.\\
 \end{figure}
 
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-The value corresponding to $ y = 1.15 $ is $ x = 57\% $.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+The value corresponding to $ y = 1.15 $ is $ x = 57\% $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -190,7 +190,7 @@ The value corresponding to $ y = 1.15 $ is $ x = 57\% $.\\
 \end{figure}
 
 
-\item Performing the linear regression on the first 20 states using \texttt{scipy.stats.linregress} outputs. \\
+\item Performing the linear regression on the first 20 states using \texttt{scipy.stats.linregress} outputs.
 The predicted values for the next 5 states are plotted. mean of the first 20 states' math scores is $ \overline{Y} = 525.7 $\\
 
 \begin{figure}[H]
@@ -222,7 +222,7 @@ The predicted values for the next 5 states are plotted. mean of the first 20 sta
 	\end{subfigure}
 \end{figure}
 
-\item Verifying the expression for $ \mathrm{Var}(A) $, \\
+\item Verifying the expression for $ \mathrm{Var}(A) $,
 
 \begin{align}
 	\mathrm{Var}(Y_i) &= \sigma^2 \nonumber \\
@@ -235,23 +235,23 @@ The predicted values for the next 5 states are plotted. mean of the first 20 sta
 	%
 	&= \frac{\sigma^2}{n} + \overline{x}^2 \frac{\sigma^2}{S_{xx}} - \frac{2B}{n} \ \mathrm{Cov}\left( \sum y_i\ ,\ B \right) \nonumber \\
 	&= \frac{\sum x_i^2}{n}\ \frac{\sigma^2}{S_{xx}}
-\end{align}\\
+\end{align}
 
-The covariance term vanishes as shown below.\\
+The covariance term vanishes as shown below.
 
 \begin{align}
 	\mathrm{Cov}\left( \sum y_i\ ,\ B \right) &= \sum\limits_{i = 1}^{n} \sum\limits_{j = 1}^{n} \mathrm{Cov}\left( y_i\ ,\ \frac{(x_j - \overline{x})\ y_j}{S_{xx}} \right) \nonumber \\
 	%
 	&= \frac{\sigma^2}{S_{xx}}\ \sum\limits_{i = 1}^{n} (x_i - \overline{x}) = 0
-\end{align}\\
+\end{align}
 
 
-\item Using the data from Problem 4, \\
+\item Using the data from Problem 4,
 
 $ \sigma^2 $ = 105660 is a point estimate along with an interval estimate based on the $ \chi^2 $ distribution give by $ [54508, 309327] $\\
 
 \item To prove the relation for $ SS_R $ using the previously defined shorthand notation\\
- $ S_{xx}, S_{YY}, S_{xY} $, \\
+ $ S_{xx}, S_{YY}, S_{xY} $,
 
 \begin{align}
 	SS_R &= \sum (Y_i - A - B x_i)^2 = \sum(Y_i - \overline{Y} + B \overline{x} - B x_i)^2 \\
@@ -261,10 +261,10 @@ $ \sigma^2 $ = 105660 is a point estimate along with an interval estimate based 
 	&= S_{YY} + \frac{S_{xY}^2}{S_{xx}} - 2\ \frac{S_{xY}^2}{S_{xx}} \nonumber \\
 	%
 	&= \frac{S_{xx}S_{YY} - S_{xY}^2}{S_{xx}}
-\end{align}\\
+\end{align}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 1.6\% $. The hypothesis can be rejected at $ 5\% $ confidence level.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 1.6\% $. The hypothesis can be rejected at $ 5\% $ confidence level.
 
 
 \begin{figure}[H]
@@ -295,8 +295,8 @@ Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 1.6\% $. The hy
 	\end{subfigure}
 \end{figure}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 11.1\% $. The hypothesis cannot be rejected at $ 5\% $ confidence level. This means that salary is not related to height.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 11.1\% $. The hypothesis cannot be rejected at $ 5\% $ confidence level. This means that salary is not related to height.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -361,7 +361,7 @@ Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 11.1\% $. The h
 
 \end{enumerate}
 
-\item Given a linear regression $ Y = 0.159 + 0.4X + e $, with $ e \sim \mathcal{N}(0, \sigma^2) $. The predictions are outlined in the figure below.\\
+\item Given a linear regression $ Y = 0.159 + 0.4X + e $, with $ e \sim \mathcal{N}(0, \sigma^2) $. The predictions are outlined in the figure below.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -391,9 +391,9 @@ Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 11.1\% $. The h
 	\end{subfigure}
 \end{figure}
 
-\item This is a case of gambler's fallacy. When successive events are independent, it is possible merely through chance for successive outcomes to be good or bad without any causal effect of one outcome on the next. For example, tossing a coin 10 times can result in 10 heads just by chance.\\
+\item This is a case of gambler's fallacy. When successive events are independent, it is possible merely through chance for successive outcomes to be good or bad without any causal effect of one outcome on the next. For example, tossing a coin 10 times can result in 10 heads just by chance.
 
-\item In order to rearrange the estimator $ A $ of the regression parameter $ \alpha $ into a t-RV with $ n-2 $ DOF, \\
+\item In order to rearrange the estimator $ A $ of the regression parameter $ \alpha $ into a t-RV with $ n-2 $ DOF,
 
 \begin{align}
 	A &\sim \mathcal{N}\left(\alpha\ ,\ \frac{\sigma^2}{S_{xx}}\ \frac{\sum x_i^2}{n}\right) \nonumber \\
@@ -403,18 +403,18 @@ Testing the hypothesis that $ \beta_1 = 0 $ gives a p-value of $ 11.1\% $. The h
 	\frac{SS_R}{\sigma^2} &\sim \chi^2_{n-2} \nonumber \\
 	%
 	\frac{1}{\sigma} \sqrt{\frac{SS_R}{n-2}} &\sim \sqrt{\frac{\chi^2_{n-2}}{(n-2)}}
-\end{align}\\
+\end{align}
 
-Rearranging into a t-RV proves the result.\\
+Rearranging into a t-RV proves the result.
 
 \begin{align}
 	t_{n-2} &\sim \frac{Z}{\sqrt{\chi^2_{n-2} / (n-2)}} \nonumber \\
 	%	
 	t_{n-2} &\sim (A - \alpha)\ \sqrt{\frac{n(n-2)S_{xx}}{SS_R \sum x_i^2}}
-\end{align}\\
+\end{align}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
-The value corresponding to $ x = 24 $ is $ y = 12.604 $.\\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
+The value corresponding to $ x = 24 $ is $ y = 12.604 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -453,9 +453,9 @@ Hypothesis testing with $ \gamma = 10\% $ for $ H_0 : \alpha = 1 $ gives a p-val
 	\text{reject $ H_0 $ if } \qquad & \sqrt{\frac{n(n-2) S_{xx}}{SS_R\ \sum x_i^2}}\ |A - \alpha| > t_{\gamma/2, n-2} \nonumber \\
 	%
 	\text{accept $ H_0 $  } \qquad & \text{otherwise}
-\end{align}\\
+\end{align}
 
-In order to find a confidence interval for $ x_0 = 24 $, using the above t-test, \\
+In order to find a confidence interval for $ x_0 = 24 $, using the above t-test,
 
 \begin{align}
 	Y(x_0) &\in A + B x_0 \pm t_{\gamma/2, n-2}\ \sqrt{\left(\frac{SS_R}{n-2}\right)\ \left(\frac{1}{n} + \frac{(x_0  - \overline{x})^2}{S_{xx}}\right)} \nonumber \\
@@ -463,7 +463,7 @@ In order to find a confidence interval for $ x_0 = 24 $, using the above t-test,
 	Y(x_0) &\in 12.604 \pm 0.6196 = [11.98, 13.22]
 \end{align}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs. \\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -494,7 +494,7 @@ In order to find a confidence interval for $ x_0 = 24 $, using the above t-test,
 	\end{subfigure}
 \end{figure}
 
-The predicted values are as tabulated as \\
+The predicted values are as tabulated as
 \begin{table}[H]
 	\centering
 	\begin{tabular}{@{}rr@{}}
@@ -509,9 +509,9 @@ The predicted values are as tabulated as \\
 	\end{tabular}
 \end{table}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for bladder cancer. \\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for bladder cancer.
 Linear relationship is not very strong with p-value of $ 0.4\% $\\
-The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
+The value corresponding to $ x = 2500 $ is $ y = 3.96 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -542,9 +542,9 @@ The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
 	\end{subfigure}
 \end{figure}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for lung cancer. \\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for lung cancer.
 Linear relationship is very strong with p-value of $ 0.67\% $\\
-The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
+The value corresponding to $ x = 2500 $ is $ y = 3.96 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -574,9 +574,9 @@ The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
 	\end{subfigure}
 \end{figure}
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for kidney cancer. \\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for kidney cancer.
 Linear relationship is nonexistent with p-value of $ 29\% $\\
-The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
+The value corresponding to $ x = 2500 $ is $ y = 3.96 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -607,14 +607,14 @@ The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
 	\end{subfigure}
 \end{figure}
 
-The $ 90\% $ confidence interval for the mean death rate with $ x_0 = 3400 $ is given by \\
+The $ 90\% $ confidence interval for the mean death rate with $ x_0 = 3400 $ is given by
 $ Y(x_0) = 3.2 \pm 0.52 = [2.67, 3.72] $\\
 
 
-\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for leukemia. \\
+\item Performing the linear regression using \texttt{scipy.stats.linregress} outputs for leukemia.
 Linear relationship is nonexistent with p-value of $ 35.31\% $ for the hypothesis $ H_0 : \beta = 0 $\\
-The value corresponding to $ x = 2500 $ is $ y = 3.96 $.\\
-The $ 90\% $ confidence interval for the mean death rate with $ x_0 = 2500 $ is given by \\
+The value corresponding to $ x = 2500 $ is $ y = 3.96 $.
+The $ 90\% $ confidence interval for the mean death rate with $ x_0 = 2500 $ is given by
 $ Y(x_0) = 6.95 \pm 0.47 = [6.48, 7.42] $\\
 
 \begin{figure}[H]
@@ -645,9 +645,9 @@ $ Y(x_0) = 6.95 \pm 0.47 = [6.48, 7.42] $\\
 	\end{subfigure}
 \end{figure}
 
-\item The variances along with the $ 95\% $ confidence intervals are as follows,\\
+\item The variances along with the $ 95\% $ confidence intervals are as follows,
 
-The predicted values are as tabulated as \\
+The predicted values are as tabulated as
 \begin{table}[H]
 	\centering
 	\begin{tabular}{@{}lrr@{}}
@@ -668,11 +668,11 @@ The variance for the two sets of data are $ \sigma_1^2 = 6.56 $ and $ \sigma_2^2
 	\frac{SS_{R1}}{\sigma_1^2}\ \frac{\sigma_2^2}{SS_{R2}} &\sim \frac{\chi^2_{n-2}}{\chi^2_{m-2}} \nonumber \\
 	%
 	\frac{SS_{R1}}{\sigma_1^2}\ \frac{\sigma_2^2}{SS_{R2}}\ \frac{m-2}{n-2} &\sim f_{n-2, m-2}
-\end{align}\\
+\end{align}
 
-Using the above f-test, the p-value for equality of the two variances is $ 95.78\% $. This is sufficient to reject the alternative hypothesis at the $ 5\% $ confidence level.\\
+Using the above f-test, the p-value for equality of the two variances is $ 95.78\% $. This is sufficient to reject the alternative hypothesis at the $ 5\% $ confidence level.
 
-\item Plotting standardized residuals shows that the assumption of linearity is reasonable. There are no discernible trends among the residual data points.\\
+\item Plotting standardized residuals shows that the assumption of linearity is reasonable. There are no discernible trends among the residual data points.
 
 \begin{figure}[H]
 	\centering
@@ -683,9 +683,9 @@ Using the above f-test, the p-value for equality of the two variances is $ 95.78
 	\end{tikzpicture}
 \end{figure}
 
-\item $ R = r^2 = 0.999625 $. \\
-p-value is so small for the linear regression that non-linearity can be strongly rejected, although there is a clear pattern in the residuals plot.\\
-The $ 90\% $ confidence interval for the amount of protein with $ x_0 = 1.5 $ is given by \\
+\item $ R = r^2 = 0.999625 $.
+p-value is so small for the linear regression that non-linearity can be strongly rejected, although there is a clear pattern in the residuals plot.
+The $ 90\% $ confidence interval for the amount of protein with $ x_0 = 1.5 $ is given by
 $ Y(x_0) = 41.97 \pm 1.2834 = [40.69, 43.26] $\\
 
 \begin{figure}[H]
@@ -725,7 +725,7 @@ $ Y(x_0) = 41.97 \pm 1.2834 = [40.69, 43.26] $\\
 	\end{tikzpicture}
 \end{figure}	
 
-\item The hypothesis $ H_0 : \beta = 1 $ has a p-value of 2.55\% and thus can be rejected at the 5\% level of significance.\\
+\item The hypothesis $ H_0 : \beta = 1 $ has a p-value of 2.55\% and thus can be rejected at the 5\% level of significance.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -755,7 +755,7 @@ $ Y(x_0) = 41.97 \pm 1.2834 = [40.69, 43.26] $\\
 	\end{subfigure}
 \end{figure}
 The expected value for $ y = 2500 $ is $ x = 2459.74 $\\
-Plotting the residuals shows no discernible pattern, validating the linear model assumption.\\
+Plotting the residuals shows no discernible pattern, validating the linear model assumption.
 Prediction interval for $ x = 0.2250 $ is $ y = 2211.54 \pm 25.26 = [2186.28, 2236.80] $
 
 \begin{figure}[H]
@@ -845,9 +845,9 @@ Prediction interval for $ x = 1.52 $ is $ y = 2.5 \pm 0.0089 = [2.4909, 2.5089] 
 		0 &= -2 \sum\limits_{i = 1}^{n} x_i  (Y_i - Bx_i) \nonumber \\
 		%
 		B^* &= \frac{\sum x_i Y_i}{\sum x_i^2}
-	\end{align}\\
+	\end{align}
 
-	\item  Given the fact that the individual $ Y_i \sim \mathcal{N}(\beta x_i, \sigma^2) $, and $ B $ is a linear combination of the set of $ \{Y_i\} $,\\
+	\item  Given the fact that the individual $ Y_i \sim \mathcal{N}(\beta x_i, \sigma^2) $, and $ B $ is a linear combination of the set of $ \{Y_i\} $,
 
 	\begin{align}
 		\mathbb{E}[B] &= \frac{1}{\sum x_i^2}\ \sum\limits_{i = 1}^{n} x_i \mathbb{E}[Y_i] \nonumber \\
@@ -855,14 +855,14 @@ Prediction interval for $ x = 1.52 $ is $ y = 2.5 \pm 0.0089 = [2.4909, 2.5089] 
 		&= \frac{1}{\sum x_i^2}\ \beta \sum\limits_{i = 1}^{n} x_i^2 = \beta \\
 		%
 		\mathrm{Var}(B) &= \frac{\sigma^2 (\sum x_i^2)}{(\sum x_i^2)^2} = \frac{\sigma^2}{\sum x_i^2}
-	\end{align}\\
+	\end{align}
 	
-	Thus, B is a normal RV with the above mean and variance.\\
+	Thus, B is a normal RV with the above mean and variance.
 	
-	\item $ SS_R $ is defined as $ \sum (Y_i - Bx_i)^2 $. Each term is the square of a linear combination of normal RVs and thus is also a squared normal RV. This means that $ SS_R $ is a $ \chi^2 $ RV.\\
-	The DOF of this $ \chi^2 $ RV is $ (n-1) $ as one of the $ n $ DOF is lost in determining $ \beta $. Same logic as for the general case of nonzero $ \alpha $.\\
+	\item $ SS_R $ is defined as $ \sum (Y_i - Bx_i)^2 $. Each term is the square of a linear combination of normal RVs and thus is also a squared normal RV. This means that $ SS_R $ is a $ \chi^2 $ RV.
+	The DOF of this $ \chi^2 $ RV is $ (n-1) $ as one of the $ n $ DOF is lost in determining $ \beta $. Same logic as for the general case of nonzero $ \alpha $.
 	
-	\item To derive a hypothesis test using the normal RV of $ B $, \\
+	\item To derive a hypothesis test using the normal RV of $ B $,
 	\begin{align}
 		H_0 : \beta = \beta_0 \qquad &\text{and} \qquad H_1 : \beta \neq \beta_0 \nonumber \\
 		%
@@ -873,9 +873,9 @@ Prediction interval for $ x = 1.52 $ is $ y = 2.5 \pm 0.0089 = [2.4909, 2.5089] 
 		\text{reject $ H_0 $ if } \qquad & \sqrt{\frac{(n-1) \sum x_i^2}{SS_R}}\ |B - \beta_0| > t_{\gamma/2, n-1} \nonumber \\
 		%
 		\text{accept $ H_0 $  } \qquad & \text{otherwise}
-	\end{align}\\
+	\end{align}
 
-	\item To find a prediction interval for $ Y(x_0) $, \\
+	\item To find a prediction interval for $ Y(x_0) $,
 	
 	\begin{align}
 		Y - Y_0 &= Y - B x_0 \sim \mathcal{N}\left(0\ ,\  \sigma^2 + \frac{x_0^2 \sigma^2}{\sum x_i^2}\right) 
@@ -884,9 +884,9 @@ Prediction interval for $ x = 1.52 $ is $ y = 2.5 \pm 0.0089 = [2.4909, 2.5089] 
 		t_{n-1} &\sim \sqrt{\frac{(n-1)}{SS_R}\ \left(\frac{\sum x_i^2}{\sum x_i^2 + x_0^2}\right)} (Y - B x_0)  \nonumber \\
 		%
 		Y &\in B x_0 \pm t_{\gamma/2, n-1}\ \sqrt{\frac{SS_R}{(n-1)}\ \left(\frac{\sum x_i^2 + x_0^2}{\sum x_i^2}\right)} 
-	\end{align}\\
+	\end{align}
 
-	This gives the $ 100 (1 - \gamma)\% $ confidence interval for the prediction $ Y $.\\
+	This gives the $ 100 (1 - \gamma)\% $ confidence interval for the prediction $ Y $.
 
 \end{enumerate}
 
@@ -924,7 +924,7 @@ Prediction interval for $ x = 1.52 $ is $ y = 2.5 \pm 0.0089 = [2.4909, 2.5089] 
 \end{figure}
 
 \item Performing the linear regression using \texttt{scipy.stats.linregress} outputs \\
-The hypothesis $ H_0 : \beta_1 = 0 $ has a p-value of $ 0.01\% $ and can be rejected strongly. The Systolic Bp does depend on the Weight.\\
+The hypothesis $ H_0 : \beta_1 = 0 $ has a p-value of $ 0.01\% $ and can be rejected strongly. The Systolic Bp does depend on the Weight.
 Mean response interval at $ 95\% $ confidence for $ x = 182 $ is $ y = 144.37 \pm 4.17 = [140.2, 148.53] $\\
 
 \begin{figure}[H]
@@ -956,7 +956,7 @@ Mean response interval at $ 95\% $ confidence for $ x = 182 $ is $ y = 144.37 \p
 	\end{subfigure}
 \end{figure}
 
-Plotting the residuals shows no discernible pattern, vindicating the linear model.\\
+Plotting the residuals shows no discernible pattern, vindicating the linear model.
 The sample correlation coefficient $ r = 0.76444 $\\
 
 \begin{figure}[H]
@@ -968,7 +968,7 @@ The sample correlation coefficient $ r = 0.76444 $\\
 	\end{tikzpicture}
 \end{figure}
 
-\item Transforming to linearity, \\
+\item Transforming to linearity,
 
 \begin{align}
 	S &= \frac{A}{N^m} \nonumber \\
@@ -978,7 +978,7 @@ The sample correlation coefficient $ r = 0.76444 $\\
 	m &= \frac{-1}{\beta_1} = 0.0813 \nonumber \\
 	%
 	A &= e^{m\beta_0} = 53.91 \nonumber
-\end{align}\\
+\end{align}
 
 Performing the linear regression using \texttt{scipy.stats.linregress} outputs \\
 
@@ -1010,7 +1010,7 @@ Performing the linear regression using \texttt{scipy.stats.linregress} outputs \
 	\end{subfigure}
 \end{figure}
 
-\item Transforming to linearity, \\
+\item Transforming to linearity,
 
 \begin{align}
 	T &= t s^{-n} \nonumber \\
@@ -1020,7 +1020,7 @@ Performing the linear regression using \texttt{scipy.stats.linregress} outputs \
 	s &= e^{-\beta_1} = 1.0968 \nonumber \\
 	%
 	t &= e^{\beta_0} = 22.54 \nonumber
-\end{align}\\
+\end{align}
 
 Performing the linear regression using \texttt{scipy.stats.linregress} outputs \\
 
@@ -1052,7 +1052,7 @@ Performing the linear regression using \texttt{scipy.stats.linregress} outputs \
 	\end{subfigure}
 \end{figure}
 
-\item Transforming to linearity, \\
+\item Transforming to linearity,
 
 \begin{align}
 	Y &= ae^{-bx} \nonumber \\
@@ -1062,7 +1062,7 @@ Performing the linear regression using \texttt{scipy.stats.linregress} outputs \
 	b &= -\beta_1 = 0.0239 \nonumber \\
 	%
 	a &= e^{\beta_0} = 1.7473 \nonumber
-\end{align}\\
+\end{align}
 
 The value corresponding to $ x = 15 $ is $ \log Y = 0.1997 $ and thus $ Y = 1.22 $\\
 
@@ -1096,7 +1096,7 @@ The value corresponding to $ x = 15 $ is $ \log Y = 0.1997 $ and thus $ Y = 1.22
 \end{figure}
 
 
-\item Transforming to linearity, \\
+\item Transforming to linearity,
 
 \begin{align}
 	P &= 1 - e^{-\alpha t} \nonumber \\
@@ -1104,9 +1104,9 @@ The value corresponding to $ x = 15 $ is $ \log Y = 0.1997 $ and thus $ Y = 1.22
 	\log (1-P) &= -\alpha t \\
 	%
 	\alpha &= -\beta_1 = 1.0534 \nonumber
-\end{align}\\
+\end{align}
 
-Using the forced pass through origin method from Problem 29, \\
+Using the forced pass through origin method from Problem 29,
 The value corresponding to $ P = 1/2 $ is $ t = 0.658 $\\
 
 \begin{figure}[H]
@@ -1136,7 +1136,7 @@ The value corresponding to $ P = 1/2 $ is $ t = 0.658 $\\
 \end{figure}
 
 
-\item Transforming to linearity, \\
+\item Transforming to linearity,
 
 \begin{align}
 	Y &= a\ e^{bx} \nonumber \\
@@ -1146,7 +1146,7 @@ The value corresponding to $ P = 1/2 $ is $ t = 0.658 $\\
 	b &= \beta_1 = 0.151 \nonumber \\
 	%
 	a &= e^{\beta_0} = 64776 \nonumber
-\end{align}\\
+\end{align}
 
 Performing the linear regression using \texttt{scipy.stats.linregress} outputs \\
 The value corresponding to $ x = 8 $ is $ y = 216403 $\\
@@ -1240,7 +1240,7 @@ The value corresponding to $ x = 8 $ is $ y = 216403 $\\
 \end{figure}
 
 
-\item Starting with linear regression gives, \\
+\item Starting with linear regression gives,
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -1279,7 +1279,7 @@ Plotting the standardized residuals \\
 	\end{tikzpicture}
 \end{figure}
 
-Trying out a degree 2 polynomial regression gives a better looking result.\\
+Trying out a degree 2 polynomial regression gives a better looking result.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -1308,7 +1308,7 @@ Trying out a degree 2 polynomial regression gives a better looking result.\\
 	\end{subfigure}
 \end{figure}
 
-\item Performing linear regression, but with variance in $ Y $ proportional to $ x $, \\
+\item Performing linear regression, but with variance in $ Y $ proportional to $ x $,
 
 \begin{align}
 	\mathrm{Var}(Y_i) &= \frac{\sigma^2}{w_i} \nonumber \\
@@ -1343,7 +1343,7 @@ Trying out a degree 2 polynomial regression gives a better looking result.\\
 \end{figure}
 
 \item Performing the polynomial regression with degree 2 using custom script outputs \\
-The value corresponding to $ x = 42 $ is $ y = 0.3429 $.\\
+The value corresponding to $ x = 42 $ is $ y = 0.3429 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -1374,8 +1374,8 @@ The value corresponding to $ x = 42 $ is $ y = 0.3429 $.\\
 \end{figure}
 
 
-\item Performing linear regression, but with variance in $ Y $ proportional to $ x $, \\
-The value corresponding to $ x = 3500 $ is $ y = 31.4 $.\\
+\item Performing linear regression, but with variance in $ Y $ proportional to $ x $,
+The value corresponding to $ x = 3500 $ is $ y = 31.4 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -1404,8 +1404,8 @@ The value corresponding to $ x = 3500 $ is $ y = 31.4 $.\\
 	\end{subfigure}
 \end{figure}
 
-Redoing the problem with $ \sqrt{Y} = \beta_0 + \beta_1 x + e $,\\
-The value corresponding to $ x = 3500 $ is $ \sqrt{Y} = 5.3725 $ which corresponds to $ Y = 28.86 $.\\
+Redoing the problem with $ \sqrt{Y} = \beta_0 + \beta_1 x + e $,
+The value corresponding to $ x = 3500 $ is $ \sqrt{Y} = 5.3725 $ which corresponds to $ Y = 28.86 $.
 
 \begin{figure}[H]
 	\begin{subfigure}[]{0.2\linewidth}
@@ -1434,7 +1434,7 @@ The value corresponding to $ x = 3500 $ is $ \sqrt{Y} = 5.3725 $ which correspon
 	\end{subfigure}
 \end{figure}
 
-\item Using custom multiple linear regression with 2 inputs, \\
+\item Using custom multiple linear regression with 2 inputs,
 
 \begin{figure}[H]
 	\centering
@@ -1450,7 +1450,7 @@ The value corresponding to $ x = 3500 $ is $ \sqrt{Y} = 5.3725 $ which correspon
 	
 \end{figure}
 
-\item Using custom multiple linear regression with 2 inputs, \\
+\item Using custom multiple linear regression with 2 inputs,
 
 \begin{figure}[H]
 	\centering
@@ -1466,7 +1466,7 @@ The value corresponding to $ x = 3500 $ is $ \sqrt{Y} = 5.3725 $ which correspon
 	
 \end{figure}
 
-\item Using custom multiple linear regression with inputs 2, 3 and 4 (input 1 is ignored because of collinearity with input 2 as seen in the correlation matrix), \\
+\item Using custom multiple linear regression with inputs 2, 3 and 4 (input 1 is ignored because of collinearity with input 2 as seen in the correlation matrix),
 
 \begin{figure}[H]
 	\centering
@@ -1483,7 +1483,7 @@ The value corresponding to $ x = 3500 $ is $ \sqrt{Y} = 5.3725 $ which correspon
 	\end{tabular}
 \end{figure}
 
-With the collinear variables removed and the model dimensions reduced to $ \{x_2, x_3, x_4\} $, \\
+With the collinear variables removed and the model dimensions reduced to $ \{x_2, x_3, x_4\} $,
 
 \begin{figure}[H]
 	\centering
@@ -1500,7 +1500,7 @@ With the collinear variables removed and the model dimensions reduced to $ \{x_2
 \end{figure}
 
 
-\item Using custom multiple linear regression with 2 inputs and log response as output, \\
+\item Using custom multiple linear regression with 2 inputs and log response as output,
 
 \begin{figure}[H]
 	\centering
@@ -1515,9 +1515,9 @@ With the collinear variables removed and the model dimensions reduced to $ \{x_2
 	\end{tabular}
 \end{figure}
 
-The $ SS_R $ is 22.08, and using $ n = 12, k = 2 $, $ \sigma^2 = 2.453 $.\\
+The $ SS_R $ is 22.08, and using $ n = 12, k = 2 $, $ \sigma^2 = 2.453 $.
 
-\item Using custom multiple linear regression with 3 inputs, \\
+\item Using custom multiple linear regression with 3 inputs,
 
 \begin{figure}[H]
 	\centering
@@ -1541,7 +1541,7 @@ $ H_0 : 8.5 = \beta_0 + \beta_1 + \beta_2 + \beta_3 $ uses a t-test and has a p-
 
 \begin{align}
 	\ddfrac{\sum\limits_{i = 0}^{k} B_i x_i - \sum\limits_{i = 0}^{k} \beta_i x_i}{\sqrt{\textbf{x}^\intercal \ (\textbf{X}^\intercal \textbf{X})^{-1}\ \textbf{x}\ \left(\frac{SS_R}{n-k-1}\right)}} &\sim t_{n-k-1}
-\end{align}\\
+\end{align}
 
 \item  Performing multiple regression using custom script with 2 inputs\\
 
@@ -1558,10 +1558,10 @@ $ H_0 : 8.5 = \beta_0 + \beta_1 + \beta_2 + \beta_3 $ uses a t-test and has a p-
 	\end{tabular}
 \end{figure}
 
-The $ 90\% $ confidence interval for $ \{x_1 = 21, x_2 = 3.6\} $ is \\
+The $ 90\% $ confidence interval for $ \{x_1 = 21, x_2 = 3.6\} $ is
 $ 238.03 \pm 3.961 = [234.069, 241.991]$
 
-\item Using custom multiple linear regression with 3 inputs, \\
+\item Using custom multiple linear regression with 3 inputs,
 $ SS_R = 4614.65 $ and $ \sigma^2 \approx 769.11 $
 
 \begin{figure}[H]
@@ -1579,12 +1579,12 @@ $ SS_R = 4614.65 $ and $ \sigma^2 \approx 769.11 $
 	
 \end{figure}
 
-The $ 95\% $ confidence interval for $ \{x_1 = 125, x_2 = 900, x_3 = 160\} $ is \\
+The $ 95\% $ confidence interval for $ \{x_1 = 125, x_2 = 900, x_3 = 160\} $ is
 $ 2309.51 \pm 37.85 = [2271.66, 2347.36]$
 
-\item Same mean and larger variance of the prediction interval means that it is always going to larger than the mean response interval for the same confidence value.\\
+\item Same mean and larger variance of the prediction interval means that it is always going to larger than the mean response interval for the same confidence value.
 
-\item Using custom multiple linear regression with 2 inputs, \\
+\item Using custom multiple linear regression with 2 inputs,
 $ SS_R = 619.43 $ and $ \sigma^2 \approx 68.825 $
 \begin{figure}[H]
 	\centering
@@ -1599,13 +1599,13 @@ $ SS_R = 619.43 $ and $ \sigma^2 \approx 68.825 $
 	\end{tabular}
 \end{figure}
 
-The $ 95\% $ confidence interval for the predicted response at $ \{x_1 = 10.2, x_2 = 17\} $ is \\
+The $ 95\% $ confidence interval for the predicted response at $ \{x_1 = 10.2, x_2 = 17\} $ is
 $ 225.7 \pm 20.05 = [205.65, 245.75]$
 
 
-\item Using custom multiple linear regression with 2 inputs, \\
+\item Using custom multiple linear regression with 2 inputs,
 $ SS_R = 0.5793 $ and $ \sigma^2 \approx 0.0644 $ \\
-The hypothesis $ H_0 : \beta_1 = 0$ has a p-value 0.45\% using a t-test. The hypothesis can be safely rejected.\\
+The hypothesis $ H_0 : \beta_1 = 0$ has a p-value 0.45\% using a t-test. The hypothesis can be safely rejected.
 
 
 
@@ -1623,11 +1623,11 @@ The hypothesis $ H_0 : \beta_1 = 0$ has a p-value 0.45\% using a t-test. The hyp
 	
 \end{figure}
 
-The $ 95\% $ confidence interval for the predicted response at $ \{x_1 = 85, x_2 = 20\} $ is \\
+The $ 95\% $ confidence interval for the predicted response at $ \{x_1 = 85, x_2 = 20\} $ is
 $ 4.645 \pm 0.613 = [4.032, 5.259]$ \\
 
-\item Using custom multiple linear regression with 2 inputs, \\
-The hypothesis $ H_0 : \beta_1 = 0$ has a p-value 81\% using a t-test. The hypothesis cannot be rejected.\\
+\item Using custom multiple linear regression with 2 inputs,
+The hypothesis $ H_0 : \beta_1 = 0$ has a p-value 81\% using a t-test. The hypothesis cannot be rejected.
 
 \begin{figure}[H]
 	\centering
@@ -1643,14 +1643,14 @@ The hypothesis $ H_0 : \beta_1 = 0$ has a p-value 81\% using a t-test. The hypot
 	
 \end{figure}
 
-The $ 95\% $ confidence interval for the mean response at $ \{x_1 = 45, x_2 = 180\} $ is \\
+The $ 95\% $ confidence interval for the mean response at $ \{x_1 = 45, x_2 = 180\} $ is
 $ 135.41 \pm 17.18 = [118.22, 152.59]$ \\
-The $ 95\% $ confidence prediction interval for the response at $ \{x_1 = 45, x_2 = 180\} $ is \\
+The $ 95\% $ confidence prediction interval for the response at $ \{x_1 = 45, x_2 = 180\} $ is
 $ 135.41 \pm 51.28 = [84.12, 186.69]$ \\
 
 
-\item Using custom multiple linear regression with 2 inputs, \\
-Since $ \beta_2  < 0$, years on the job increasing lead to lesser job satisfaction.\\
+\item Using custom multiple linear regression with 2 inputs,
+Since $ \beta_2  < 0$, years on the job increasing lead to lesser job satisfaction.
 
 \begin{figure}[H]
 	\centering
@@ -1666,7 +1666,7 @@ Since $ \beta_2  < 0$, years on the job increasing lead to lesser job satisfacti
 	
 \end{figure}
 
-The $ 95\% $ confidence prediction interval for the response at $ \{x_1 = 56, x_2 = 5\} $ is \\
+The $ 95\% $ confidence prediction interval for the response at $ \{x_1 = 56, x_2 = 5\} $ is
 $ 7.3 \pm 1.397 = [5.9, 8.7]$ \\
 
 \item Performing the linear regression using \texttt{scipy.stats.linregress} outputs \\
@@ -1699,11 +1699,11 @@ $ 7.3 \pm 1.397 = [5.9, 8.7]$ \\
 	\end{subfigure}
 \end{figure}
 
-Since $ \beta_1  > 0$, years on the job increasing lead to greater job satisfaction.\\
+Since $ \beta_1  > 0$, years on the job increasing lead to greater job satisfaction.
 
-The trend is reversed compared to the relationship between the same input and response in the presence of the other input variable.\\
+The trend is reversed compared to the relationship between the same input and response in the presence of the other input variable.
 
-The reversal in relationship between $ x_2 $ and $ y $ upon the introduction of $ x_1 $ happens because of significant multicollinearity, as seen in the correlation matrix.\\
+The reversal in relationship between $ x_2 $ and $ y $ upon the introduction of $ x_1 $ happens because of significant multicollinearity, as seen in the correlation matrix.
 
 \begin{figure}[H]
 	\centering
@@ -1729,7 +1729,7 @@ The reversal in relationship between $ x_2 $ and $ y $ upon the introduction of 
 	y &= 1 = \exp (a + bx) \nonumber \\
 	%
 	x^* &= -\frac{a}{b}
-\end{align}\\
+\end{align}
 
 \item How to do logistic regression
 
