--- a/TeX_files/exercise10_new.tex
+++ b/TeX_files/exercise10_new.tex
@@ -2,7 +2,7 @@
 
 \begin{enumerate}
 	
-	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected.\\
+	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected.
 	
 	\begin{table}[H]
 		\centering
@@ -21,7 +21,7 @@
 		\bigskip
 	\end{table}
 
-	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected.\\
+	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected.
 
 	\begin{table}[H]
 		\centering
@@ -40,9 +40,9 @@
 		\bigskip
 	\end{table}
 
-	\item Issues with either too large a Type-I error rate. When attempting to compensate for this, the Type-II error rate is too small. No meaningful compromise exists, forcing the use of ANOVA.\\
+	\item Issues with either too large a Type-I error rate. When attempting to compensate for this, the Type-II error rate is too small. No meaningful compromise exists, forcing the use of ANOVA.
 	
-	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis can be rejected at the $ 5\% $ level of confidence.\\
+	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis can be rejected at the $ 5\% $ level of confidence.
 	
 	\begin{table}[H]
 		\centering
@@ -119,7 +119,7 @@
 		\bigskip
 	\end{table}
 
-	\item Sample variance fits into the expression for $ SS_W $,\\
+	\item Sample variance fits into the expression for $ SS_W $,
 	
 	
 	\begin{align}
@@ -128,9 +128,9 @@
 		(n-1)\ \sum\limits_{i = 1}^{m} S_i^2 &= \sum\limits_{i = 1}^{m} \sum\limits_{j = 1}^{n} (X_{ij} - X_{i\bullet})^2 \\
 		%
 		&= SS_W \nonumber
-	\end{align}\\
+	\end{align}
 
-	\item Using the formula above relating sample variance to $ SS_W $ and performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis can be rejected at the $ 1\% $ level of confidence. \\
+	\item Using the formula above relating sample variance to $ SS_W $ and performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis can be rejected at the $ 1\% $ level of confidence.
 	
 	\begin{table}[H]
 		\centering
@@ -191,9 +191,9 @@
 		\bigskip
 	\end{table}
 
-	\item Performing One-way ANOVA using given sample means and variances with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected at the $ 5\% $ level of confidence. \\
+	\item Performing One-way ANOVA using given sample means and variances with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected at the $ 5\% $ level of confidence.
 	
-	The point estimators of the difference between pairs of sample means is listed as a 2D array below. The width of the $ 95\% $ confidence interval is $ W = 4.785 $.\\
+	The point estimators of the difference between pairs of sample means is listed as a 2D array below. The width of the $ 95\% $ confidence interval is $ W = 4.785 $.
 	
 	\begin{table}[H]
 		\centering
@@ -228,9 +228,9 @@
 	\end{table}
 	\bigskip
 	
-	\item Performing One-way ANOVA using given sample means and variances with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected at the $ 5\% $ level of confidence. \\
+	\item Performing One-way ANOVA using given sample means and variances with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected at the $ 5\% $ level of confidence.
 	
-	The point estimators of the difference between pairs of sample means is listed as a 2D array below. The width of the $ 95\% $ confidence interval is $ W = 2.477 $.\\
+	The point estimators of the difference between pairs of sample means is listed as a 2D array below. The width of the $ 95\% $ confidence interval is $ W = 2.477 $.
 	
 	\begin{table}[H]
 		\centering
@@ -264,9 +264,9 @@
 		\end{minipage}
 	\end{table}
 
-	\item Performing One-way ANOVA using given sample means and variances with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected at the $ 5\% $ level of confidence. \\
+	\item Performing One-way ANOVA using given sample means and variances with $ H_0 : $ all means are equal. The null hypothesis cannot be rejected at the $ 5\% $ level of confidence.
 	
-	The point estimators of the difference between pairs of sample means is listed as a 2D array below. The width of the $ 95\% $ confidence interval is $ W = 0.4504 $.\\
+	The point estimators of the difference between pairs of sample means is listed as a 2D array below. The width of the $ 95\% $ confidence interval is $ W = 0.4504 $.
 	
 	\begin{table}[H]
 		\centering
@@ -300,7 +300,7 @@
 		\end{minipage}
 	\end{table}
 
-	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis can be rejected at the $ 5\% $ level of confidence.\\
+	\item Performing One-way ANOVA with $ H_0 : $ all means are equal. The null hypothesis can be rejected at the $ 5\% $ level of confidence.
 	
 	\begin{table}[H]
 		\centering
@@ -320,7 +320,7 @@
 		\bigskip
 	\end{table}
 	
-	\item The grand mean is the same when calculated either way.\\
+	\item The grand mean is the same when calculated either way.
 	
 	\begin{align}
 		\frac{1}{m}\ \sum\limits_{i = 1}^{m} x_{i\bullet} &= \frac{1}{m}\ \sum\limits_{i = 1}^{m} \left( \frac{1}{n}\ \sum\limits_{j = 1}^{n}\ x_{ij} \right) \nonumber \\
@@ -328,26 +328,26 @@
 		\frac{1}{n}\ \sum\limits_{j = 1}^{n} x_{\bullet j} &= \frac{1}{n}\ \sum\limits_{j = 1}^{n} \left( \frac{1}{m}\ \sum\limits_{i = 1}^{m}\ x_{ij} \right) \nonumber \\
 		%
 		\text{either LHS } &= \sum\limits_{j = 1}^{n} \sum\limits_{i = 1}^{m} \frac{x_{ij}}{mn} = x_{\bullet \bullet}
-	\end{align}\\
+	\end{align}
 
-	\item Given $ x_{ij} = i + j^2 $, and using knwon sums of series formulae,\\
+	\item Given $ x_{ij} = i + j^2 $, and using knwon sums of series formulae,
 
 		\begin{align}
 			\sum\limits_{j = 1}^{3} \sum\limits_{i = 1}^{2} x_{ij} &= \sum\limits_{j = 1}^{3} (2j^2 + 3) = 9 + 2(14) = 37 \nonumber \\
 			%
 			\sum\limits_{i = 1}^{2} \sum\limits_{j = 1}^{3} x_{ij} &= \sum\limits_{i = 1}^{2} (3i + 14) = 28 + 3(3) = 37 \nonumber \\
-		\end{align}\\
+		\end{align}
 	
 	\item $ x_{ij} = a_i + b_j $\\
 	
 	\begin{align}
 		\sum\limits_{j = 1}^{n} \sum\limits_{i = 1}^{m} x_{ij} &= \sum\limits_{j = 1}^{n} (m b_j + \sum_i a_i) = m \sum_j b_j + n \sum_i a_i 
-	\end{align}\\
+	\end{align}
 
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,\\
-	$ H_0^r $ is rejected and $ H_0^c $ rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,
+	$ H_0^r $ is rejected and $ H_0^c $ rejected at $ 5\% $ significance.
 
-	The parameters of the model $ \mu, \alpha_i, \beta_j $ are estimated as\\
+	The parameters of the model $ \mu, \alpha_i, \beta_j $ are estimated as
 	
 	\begin{table}[H]
 		\centering
@@ -391,10 +391,10 @@
 	\bigskip
 	
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,\\
-	$ H_0^r $ is accepted and $ H_0^c $ rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,
+	$ H_0^r $ is accepted and $ H_0^c $ rejected at $ 5\% $ significance.
 	
-	The parameters of the model $ \mu, \alpha_i, \beta_j $ are estimated as\\
+	The parameters of the model $ \mu, \alpha_i, \beta_j $ are estimated as
 	
 	\begin{table}[H]
 		\centering
@@ -442,10 +442,10 @@
 	
 	\item Refer Problem 19
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,\\
-	$ H_0^r $ is rejected and $ H_0^c $ rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,
+	$ H_0^r $ is rejected and $ H_0^c $ rejected at $ 5\% $ significance.
 	
-	The parameters of the model $ \mu, \alpha_i, \beta_j $ are estimated as. This table is used to find the parameter differences.\\
+	The parameters of the model $ \mu, \alpha_i, \beta_j $ are estimated as. This table is used to find the parameter differences.
 	
 	
 	\begin{table}[H]
@@ -489,11 +489,11 @@
 	\end{table}
 	\bigskip
 	
-	$ \widehat{\alpha_i} - \widehat{\alpha_1} = [ 0, -2, -4.67, 3.34 ] $ is the advantage of detergent 1 over other detergents.\\
-	$ \widehat{\beta_i} - \widehat{\beta_3} = [6.25, 7.75, 0  ] $ is the advantage of machine 3 over other detergents.\\
+	$ \widehat{\alpha_i} - \widehat{\alpha_1} = [ 0, -2, -4.67, 3.34 ] $ is the advantage of detergent 1 over other detergents.
+	$ \widehat{\beta_i} - \widehat{\beta_3} = [6.25, 7.75, 0  ] $ is the advantage of machine 3 over other detergents.
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,\\
-	$ H_0^r $ is accepted and $ H_0^c $ rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor and column-factor null hypotheses gives,
+	$ H_0^r $ is accepted and $ H_0^c $ rejected at $ 5\% $ significance.
 	
 	\begin{table}[H]
 		\centering
@@ -517,8 +517,8 @@
 	\end{table}
 
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,\\
-	$ H_0^r $ is accepted, $ H_0^c $ accepted and $ H_0^{int} $ is accepted at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,
+	$ H_0^r $ is accepted, $ H_0^c $ accepted and $ H_0^{int} $ is accepted at $ 5\% $ significance.
 	
 	\begin{table}[H]
 		\centering
@@ -538,8 +538,8 @@
 		\bigskip
 	\end{table}
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,\\
-	$ H_0^r $ is accepted, $ H_0^c $ rejected and $ H_0^{int} $ is rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,
+	$ H_0^r $ is accepted, $ H_0^c $ rejected and $ H_0^{int} $ is rejected at $ 5\% $ significance.
 	
 	\begin{table}[H]
 		\centering
@@ -559,8 +559,8 @@
 		\bigskip
 	\end{table}
 
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,\\
-	$ H_0^r $ is rejected, $ H_0^c $ rejected and $ H_0^{int} $ is rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,
+	$ H_0^r $ is rejected, $ H_0^c $ rejected and $ H_0^{int} $ is rejected at $ 5\% $ significance.
 	
 	\begin{table}[H]
 		\centering
@@ -580,8 +580,8 @@
 		\bigskip
 	\end{table}
 
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,\\
-	$ H_0^r $ is rejected, $ H_0^c $ rejected and $ H_0^{int} $ is rejected at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,
+	$ H_0^r $ is rejected, $ H_0^c $ rejected and $ H_0^{int} $ is rejected at $ 5\% $ significance.
 	
 	\begin{table}[H]
 		\centering
@@ -601,8 +601,8 @@
 		\bigskip
 	\end{table}
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,\\
-	$ H_0^r $ is accepted, $ H_0^c $ accepted and $ H_0^{int} $ is accepted at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,
+	$ H_0^r $ is accepted, $ H_0^c $ accepted and $ H_0^{int} $ is accepted at $ 5\% $ significance.
 	
 	\begin{table}[H]
 		\centering
@@ -622,8 +622,8 @@
 		\bigskip
 	\end{table}
 	
-	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,\\
-	$ H_0^r $ is rejected, $ H_0^c $ rejected and $ H_0^{int} $ is accepted at $ 5\% $ significance.\\
+	\item Performing two-way ANOVA (balanced) and checking for the row-factor, column-factor and interaction factor null hypotheses gives,
+	$ H_0^r $ is rejected, $ H_0^c $ rejected and $ H_0^{int} $ is accepted at $ 5\% $ significance.
 
 	\begin{table}[H]
 		\centering
