--- a/TeX_files/exercise11_new.tex
+++ b/TeX_files/exercise11_new.tex
@@ -2,7 +2,7 @@
 
 \begin{enumerate}
 	
-	\item Table of observations and results of goodness-of-fit tests are tabulated below.\\
+	\item Table of observations and results of goodness-of-fit tests are tabulated below.
 	
 	\begin{table}[H]
 		\centering
@@ -39,7 +39,7 @@
 	\end{table}
 	\bigskip
 	
-	\item Table of observations and results of goodness-of-fit tests are tabulated below.\\
+	\item Table of observations and results of goodness-of-fit tests are tabulated below.
 	
 	\begin{table}[H]
 		\centering
@@ -79,7 +79,9 @@
 	\end{table}
 	\bigskip
 	
-	\item Table of observations and results of goodness-of-fit tests for an underlying Poisson distribution are tabulated below.\\
+	\item No data given.
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying Poisson distribution (with $ \lambda = 4.2 $) are tabulated below.
 	
 	\begin{table}[H]
 		\centering
@@ -125,9 +127,7 @@
 	\end{table}
 	\bigskip
 	
-	\item No data given.\\
-	
-	\item Table of observations and results of goodness-of-fit tests for an underlying exponential distribution with mean 50 are tabulated below.\\
+	\item Table of observations and results of goodness-of-fit tests for an underlying exponential distribution with mean 50 are tabulated below.
 	
 	\begin{table}[H]
 		\centering
@@ -165,7 +165,7 @@
 	\end{table}
 	\bigskip
 	
-	\item Table of observations and results of goodness-of-fit tests are tabulated below.\\
+	\item Table of observations and results of goodness-of-fit tests are tabulated below.
 	
 	\begin{table}[H]
 		\centering
@@ -202,5 +202,699 @@
 		\end{minipage}
 	\end{table}
 	\bigskip
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying uniform distribution are tabulated below.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Hour of day & $X_i$ &   $p_i$ \\
+				\midrule
+				0     &    22 &  0.0417 \\
+				1     &    24 &  0.0417 \\
+				2     &    24 &  0.0417 \\
+				3     &    24 &  0.0417 \\
+				4     &    26 &  0.0417 \\
+				5     &    26 &  0.0417 \\
+				6     &    28 &  0.0417 \\
+				7     &    29 &  0.0417 \\
+				8     &    30 &  0.0417 \\
+				9     &    30 &  0.0417 \\
+				10    &    32 &  0.0417 \\
+				11    &    33 &  0.0417 \\
+				12    &    36 &  0.0417 \\
+				13    &    36 &  0.0417 \\
+				14    &    37 &  0.0417 \\
+				15    &    37 &  0.0417 \\
+				16    &    37 &  0.0417 \\
+				17    &    38 &  0.0417 \\
+				18    &    40 &  0.0417 \\
+				19    &    41 &  0.0417 \\
+				20    &    42 &  0.0417 \\
+				21    &    43 &  0.0417 \\
+				22    &    49 &  0.0417 \\
+				23    &    51 &  0.0417 \\
+				\midrule
+				Total &   815 &       1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  4.25e+01 \\
+				$p$ value \%               &      0.80 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  rejected \\
+				minimum $n p_i$            &        34 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying Poisson distribution ($\lambda$ = 0.3) are tabulated below.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Signals/hr & $X_i$ &   $p_i$ \\
+				\midrule
+				0     &  1924 &  0.7408 \\
+				1     &   541 &  0.2222 \\
+				2     &   103 &  0.0333 \\
+				3     &    17 &  0.0033 \\
+				4     &     1 &  0.0003 \\
+				5     &     1 &     0.0 \\
+				$ >5 $    &     0 &     0.0 \\
+				\midrule
+				Total &  2587 &       1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  3.74e+01 \\
+				$p$ value \%               &      0.00 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  rejected \\
+				minimum $n p_i$            &         0 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Table of observations and results of goodness-of-fit tests are tabulated below.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Accidents & $X_i$ & $p_i$ \\
+				\midrule
+				0     &   366 &  0.82 \\
+				1     &    68 &  0.15 \\
+				$>1$  &     6 &  0.03 \\
+				\midrule
+				Total &   440 &     1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  4.06e+00 \\
+				$p$ value \%               &     13.12 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  accepted \\
+				minimum $n p_i$            &        13 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying uniform distribution are tabulated below.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Weekday & $X_i$ &   $p_i$ \\
+				\midrule
+				Sun   &   156 &  0.1429 \\
+				Mon   &   144 &  0.1429 \\
+				Tue   &   170 &  0.1429 \\
+				Wed   &   158 &  0.1429 \\
+				Thu   &   172 &  0.1429 \\
+				Fri   &   148 &  0.1429 \\
+				Sat   &   152 &  0.1429 \\
+				\midrule
+				Total &  1100 &       1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  3.94e+00 \\
+				$p$ value \%               &     68.51 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  accepted \\
+				minimum $n p_i$            &       157 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying uniform distribution are tabulated below. An outcome at least as unlikely as the reported one only has a $ 3.2\% $ chance of occurring.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Coin Flip &  $X_i$ & $p_i$ \\
+				\midrule
+				Heads &  20004 &   0.5 \\
+				Tails &  19996 &   0.5 \\
+				\midrule
+				Total &  40000 &     1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  1.60e-03 \\
+				$p$ value \%               &     96.81 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  accepted \\
+				minimum $n p_i$            &     20000 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Repeating problem 1 with the $ \chi^2 $ approximation replaced by MC sampling, gives
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lrr@{}}
+			\toprule
+			Method &  Runs & $ p $-value \% \\
+			\midrule
+			$ \chi^2_{k-1} $ &  1 &   65.00 \\
+			MC & 1000 &   63.40 \\
+			MC & 5000 &   63.42 \\
+			MC & 10000 &   64.61 \\
+			MC & 50000 &   64.06 \\
+			MC & 100000 &   64.08 \\
+			\bottomrule
+		\end{tabular}
+	\end{table}
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying normal distribution $ \mathcal{N}(100, 15^2) $ distribution are tabulated below.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Value & $X_i$ &   $p_i$ \\
+				\midrule
+				$ <70 $     &     3 &  0.0228 \\
+				70-85   &    18 &  0.1359 \\
+				85-100  &    30 &  0.3413 \\
+				100-115 &    35 &  0.3413 \\
+				115-130 &    32 &  0.1359 \\
+				$ >130 $    &     2 &  0.0228 \\
+				\midrule
+				Total   &   120 &       1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  1.93e+01 \\
+				$p$ value \%               &      0.17 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  rejected \\
+				minimum $n p_i$            &         3 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Table of observations and results of goodness-of-fit tests for an underlying Poisson distribution (with $ \lambda = 4 $) are tabulated below.
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lrr@{}}
+				\toprule
+				Failures & $X_i$ &   $p_i$ \\
+				\midrule
+				0     &     0 &  0.0183 \\
+				1     &     5 &  0.0733 \\
+				2     &    22 &  0.1465 \\
+				3     &    23 &  0.1954 \\
+				4     &    32 &  0.1954 \\
+				5     &    22 &  0.1563 \\
+				6     &    19 &  0.1042 \\
+				7     &    13 &  0.0595 \\
+				8     &     6 &  0.0298 \\
+				9     &     4 &  0.0132 \\
+				10    &     4 &  0.0053 \\
+				11    &     0 &  0.0019 \\
+				\midrule
+				Total &   150 &       1 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Goodness of Fit Test}} \\
+				\midrule
+				Test Statistic             &  2.62e+01 \\
+				$p$ value \%               &      0.60 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  rejected \\
+				minimum $n p_i$            &         0 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters,
+	
+	\begin{table}[H]
+		\centering
+		\begin{minipage}{0.49\textwidth}
+			\centering
+			\begin{tabular}{lrrr}
+				\toprule
+				Income &  South &  North &  Row Sum \\
+				\midrule
+				0-10   &     42 &     53 &       95 \\
+				10–20  &     55 &     90 &      145 \\
+				20–30  &     47 &     88 &      135 \\
+				$ >30 $    &     36 &     89 &      125 \\
+				\midrule
+				Total  &    180 &    320 &      500 \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	%
+		\begin{minipage}{0.49\textwidth}
+			\centering
+			\begin{tabular}{@{}lr@{}}
+				\toprule
+				\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+				\midrule
+				X levels ($r$)             &         4 \\
+				Y levels ($s$)             &         2 \\
+				Data points ($n$)          &       500 \\
+				Test Statistic             &  5.91e+00 \\
+				$p$ value \%               &     11.61 \\
+				Significance ($\alpha$) \% &      5.00 \\
+				null hypothesis ($H_0$)    &  accepted \\
+				\bottomrule
+			\end{tabular}
+			
+		\end{minipage}
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters,
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			{} & \multicolumn{2}{c}{Birth Weight} & {} \\
+			Maternal Age &   $ <2.5 $kg &   $ >2.5 $kg &  Row Sum \\
+			\midrule
+			$ <= 20 $        &                    10 &                    40 &       50 \\
+			$ > 20 $         &                    15 &                   135 &      150 \\
+			\midrule
+			Total        &                    25 &                   175 &      200 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         2 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &       200 \\
+			Test Statistic             &  3.43e+00 \\
+			$p$ value \%               &      6.41 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  accepted \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters, with doubled raw data from Problem 16\\
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			{} & \multicolumn{2}{c}{Birth Weight} & {} \\
+			{Maternal Age} &   $ <2.5 $kg &   $ >2.5 $kg &  Row Sum \\
+			\midrule
+			$ <= 20 $        &                    20 &                    80 &       100 \\
+			$ > 20 $         &                    30 &                   270 &      300 \\
+			\midrule
+			Total        &                    50 &                   350 &      400 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         2 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &       200 \\
+			Test Statistic             &  6.86e+00 \\
+			$p$ value \%               &      0.88 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  rejected \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			{} & \multicolumn{2}{c}{Status at age 1} & {} \\
+			Birthweight &   Alive &   Dead &  Row Sum \\
+			\midrule
+			$ <2500 $       &    4597 &    618 &     5215 \\
+			$ >2500 $       &   67093 &    422 &    67515 \\
+			\midrule
+			Total       &   71690 &   1040 &    72730 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         2 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &     72730 \\
+			Test Statistic             &  4.33e+03 \\
+			$p$ value \%               &      0.00 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  rejected \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrrr}
+			\toprule
+			Outcome &  Nonsmoker &  Moderate Smoker &  Heavy Smoker &  Row Sum \\
+			\midrule
+			Hypertension    &         20 &               38 &            28 &       86 \\
+			No hypertension &         50 &               27 &            18 &       95 \\
+			\midrule
+			Total           &         70 &               65 &            46 &      181 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         2 \\
+			Y levels ($s$)             &         3 \\
+			Data points ($n$)          &       181 \\
+			Test Statistic             &  1.65e+01 \\
+			$p$ value \%               &      0.03 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  rejected \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrrr}
+			\toprule
+			Condition &   Defective &   Acceptable &   Superior &  Row Sum \\
+			\midrule
+			Before    &          25 &          218 &         22 &      265 \\
+			After     &           9 &          103 &         14 &      126 \\
+			\midrule
+			Total     &          34 &          321 &         36 &      391 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         2 \\
+			Y levels ($s$)             &         3 \\
+			Data points ($n$)          &       391 \\
+			Test Statistic             &  1.25e+00 \\
+			$p$ value \%               &     53.52 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  accepted \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			Condition &   Accident &   No Accident &  Row Sum \\
+			\midrule
+			Cellular phone &         22 &           278 &      300 \\
+			No phone       &         26 &           374 &      400 \\
+			\midrule
+			Total          &         48 &           652 &      700 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         2 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &       700 \\
+			Test Statistic             &  1.86e-01 \\
+			$p$ value \%               &     66.59 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  accepted \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters. Retesting at $ \alpha = 1\% $ leads to the hypothesis being accepted.
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			Cavities &   Fluoridated &   Non-fluoridated &  Row Sum \\
+			\midrule
+			0         &                154 &                   133 &      287 \\
+			1         &                 20 &                    18 &       38 \\
+			2         &                 14 &                    21 &       35 \\
+			3 or more &                 12 &                    28 &       40 \\
+			\midrule
+			Total     &                200 &                   200 &      400 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         4 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &       400 \\
+			Test Statistic             &  9.44e+00 \\
+			$p$ value \%               &      2.40 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  rejected \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters \\
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			Type of Operation &   Sampled &   Lawsuit &  Row Sum \\
+			\midrule
+			Heart surgery     &                     400 &                     16 &      416 \\
+			Brain surgery     &                     300 &                     19 &      319 \\
+			Appendectomy      &                     300 &                      7 &      307 \\
+			\midrule
+			Total             &                    1000 &                     42 &     1042 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         3 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &      1042 \\
+			Test Statistic             &  5.53e+00 \\
+			$p$ value \%               &      6.31 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  accepted \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Testing the contingency table for independence of $ X $ and $ Y $ parameters \\
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{lrrr}
+			\toprule
+			Sky Color &   Observations &   Rain &  Row Sum \\
+			\midrule
+			Red             &             61 &     26 &       87 \\
+			Mainly red      &            194 &     52 &      246 \\
+			Yellow          &            159 &     81 &      240 \\
+			Mainly yellow   &            188 &     86 &      274 \\
+			Red and yellow  &            194 &     52 &      246 \\
+			Gray            &            302 &    167 &      469 \\
+			\midrule
+			Total           &           1098 &    464 &     1562 \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{@{}lr@{}}
+			\toprule
+			\multicolumn{2}{c}{\texttt{Contingency Table Independence}} \\
+			\midrule
+			X levels ($r$)             &         6 \\
+			Y levels ($s$)             &         2 \\
+			Data points ($n$)          &      1562 \\
+			Test Statistic             &  2.74e+01 \\
+			$p$ value \%               &      0.00 \\
+			Significance ($\alpha$) \% &      5.00 \\
+			null hypothesis ($H_0$)    &  rejected \\
+			\bottomrule
+		\end{tabular}
+		
+	\end{table}
+	\bigskip
+	
+	\item Using built-in \texttt{scipy.stats.kstest} to perform the KS-test,
+	$ p $ value = 1.5\% for KS statistic $ D = 0.4316 $
 \end{enumerate}
 
